// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generate_embeddings should generate embeddings for 1 string/batch:false 1`] = `
[
  -0.040223494,
  0.036910173,
  -0.029072426,
  0.01620091,
  -0.035772048,
  -0.04076332,
  -0.055214636,
  -0.040958237,
  0.003247558,
  0.0019827713,
  -0.00666854,
  0.0116274115,
  0.021592887,
  -0.013407999,
  0.030296259,
  0.0042019538,
  0.020469557,
  -0.022949385,
  -0.02201794,
  -0.03109984,
  -0.050929394,
  -0.017461233,
  0.012290435,
  -0.014042799,
  0.015395629,
  0.041218746,
  -0.036899615,
  -0.0006291881,
  0.00036546998,
  -0.06098459,
  0.037168358,
  0.08009707,
  -0.017955288,
  -0.04980442,
  -0.03419127,
  -0.035745367,
  0.004458627,
  0.00081524585,
  -0.06881104,
  0.010894425,
  0.015911995,
  0.022516698,
  0.023183638,
  -0.05889619,
  0.002168551,
  -0.044268668,
  -0.04046761,
  -0.002440914,
  0.0032916146,
  -0.06478305,
  0.009072804,
  0.03206246,
  0.037781913,
  -0.001057974,
  0.0034809366,
  0.02224112,
  -0.016867235,
  -0.023028448,
  -0.062129,
  0.0019882624,
  -0.020531269,
  -0.009342835,
  -0.0035411431,
  -0.00788465,
  0.002988684,
  0.15492971,
  0.030647403,
  -0.013308477,
  -0.004863455,
  -0.015082439,
  -0.018025309,
  -0.012127098,
  -0.0009241285,
  0.022337198,
  -0.06574847,
  0.04704821,
  -0.015045466,
  -0.011313654,
  0.013529516,
  0.036275294,
  0.07957706,
  -0.004288955,
  -0.00016959794,
  0.017653687,
  -0.013293977,
  0.047866434,
  0.014952005,
  0.036797117,
  -0.004336811,
  -0.013558303,
  -0.037311915,
  -0.02313383,
  0.027804252,
  -0.051471755,
  -0.028470213,
  0.016755445,
  -0.0055215294,
  0.019557206,
  0.036271956,
  0.033139374,
  0.04892908,
  0.018777413,
  0.009225647,
  -0.01303223,
  0.0026263122,
  0.0041349004,
  0.026712917,
  0.02685435,
  0.022832995,
  0.0132132135,
  0.048743,
  0.02738433,
  0.020036452,
  0.02199094,
  0.013213266,
  -0.008269891,
  0.0028213186,
  -0.016591176,
  -0.0040015145,
  -0.022262264,
  -0.0076761497,
  0.02666505,
  0.023431187,
  0.009735227,
  0.028961232,
  -0.049734734,
  0.008873205,
  0.034977853,
  -0.017548975,
  -0.02679054,
  0.06384383,
  0.0069157765,
  -0.034251057,
  0.0045064865,
  -0.006364648,
  -0.030602371,
  -0.0026401146,
  -0.025854437,
  -0.013344763,
  -0.028475752,
  0.022518668,
  0.06846874,
  -0.021445045,
  -0.014992474,
  -0.013668433,
  -0.052522838,
  -0.028572522,
  0.014152912,
  0.018677576,
  -0.041450456,
  -0.0039821933,
  -0.021429459,
  0.033647884,
  0.0468145,
  0.032547835,
  0.003226234,
  -0.042875435,
  0.032136783,
  -0.0054103835,
  -0.014403589,
  0.013746957,
  -0.005504929,
  -0.04080636,
  -0.013715998,
  -0.0023966802,
  0.004317579,
  0.036359716,
  0.02484958,
  0.0036225736,
  0.0038093324,
  -0.0128902495,
  -0.00989117,
  0.02657123,
  -0.02004453,
  -0.015467018,
  0.023334084,
  0.056861002,
  0.024352059,
  0.017912382,
  -0.036585413,
  -0.042832654,
  0.0065943464,
  -0.00043394277,
  -0.023205237,
  -0.04481378,
  0.034812726,
  -0.029750895,
  -0.009519412,
  0.023950947,
  0.0108516645,
  0.0013421407,
  -0.009194147,
  0.031681787,
  -0.038750697,
  0.0075795697,
  0.007997994,
  0.0040703285,
  -0.01185898,
  -0.030216528,
  -0.00092430616,
  -0.03326987,
  -0.0043656155,
  -0.004172702,
  0.07070254,
  -0.0630661,
  0.0006202437,
  -0.012102176,
  -0.0098432265,
  0.030897569,
  -0.019122427,
  0.021461759,
  0.03370573,
  0.025960753,
  -0.0218747,
  -0.060582917,
  0.013210318,
  -0.04244365,
  0.0018250066,
  -0.004718639,
  -0.017809791,
  0.012653244,
  -0.01643057,
  -0.004954422,
  0.018837256,
  0.014209665,
  0.0060657035,
  0.009076278,
  0.0042796494,
  0.023370704,
  0.01362946,
  0.037219122,
  -0.0076780417,
  0.0033769505,
  -0.028068798,
  -0.008844272,
  -0.019027423,
  -0.055774488,
  -0.0011853062,
  0.0369704,
  0.008710457,
  -0.003702908,
  -0.009777154,
  -0.01151059,
  -0.0072179437,
  -0.042655986,
  0.05371848,
  -0.009385003,
  0.013167632,
  0.0036928435,
  0.0054824254,
  0.0124827465,
  -0.025427278,
  -0.0034876808,
  0.026318392,
  0.066196814,
  0.00057881634,
  -0.010478483,
  -0.010165479,
  -0.0052919397,
  -0.024490291,
  0.023439089,
  -0.060232025,
  0.013613779,
  0.05238485,
  0.02742825,
  0.009827107,
  -0.023323307,
  -0.014748259,
  0.018340174,
  0.008516631,
  0.015711766,
  -0.06771214,
  -0.010658552,
  -0.019776905,
  -0.007950745,
  0.016271098,
  -0.012776468,
  -0.04696763,
  0.0203838,
  0.0128400475,
  0.042937115,
  -0.0032076268,
  0.036121644,
  -0.017869536,
  -0.0012877882,
  0.017093716,
  -0.06802191,
  0.014688999,
  0.029801363,
  -0.04731412,
  0.016147185,
  0.056355268,
  0.030687867,
  -0.008921309,
  0.021186918,
  -0.0033205329,
  -0.010277796,
  -0.16280085,
  0.0033566002,
  0.013467126,
  -0.04851665,
  0.007291625,
  -0.03249049,
  -0.032293443,
  0.047209937,
  -0.0014013714,
  0.020064324,
  -0.026038907,
  -0.0010579019,
  -0.037636608,
  0.032780156,
  -0.02075346,
  0.0269249,
  0.009221672,
  -0.03529381,
  0.058765456,
  -0.056221098,
  0.004809797,
  -0.010666879,
  0.07082909,
  -0.030068832,
  0.022619823,
  0.0021392542,
  0.035419416,
  -0.04316011,
  -0.053454395,
  0.002246863,
  -0.03243077,
  0.011656234,
  -0.0064708726,
  0.021072635,
  0.024108421,
  0.050854597,
  0.023031052,
  -0.037844222,
  0.004458516,
  0.020019948,
  0.0045154155,
  0.01569389,
  0.0051477137,
  0.023567485,
  -0.018055364,
  -0.045970283,
  -0.03655653,
  0.004138227,
  -0.013965852,
  -0.0017617985,
  -0.014458689,
  -0.0041283485,
  -0.022019248,
  -0.056299303,
  -0.018144485,
  0.013029218,
  -0.032033566,
  0.017988667,
  -0.01263482,
  -0.010691798,
  -0.014436746,
  -0.037939075,
  0.018391315,
  0.0030770446,
  -0.014009116,
  0.018493747,
  0.018158842,
  -0.029859683,
  0.016019218,
  -0.015132705,
  0.020267934,
  0.0024080526,
  0.0034028853,
  -0.031878702,
  0.016926268,
  -0.010497388,
  0.034737594,
  -0.009953177,
  -0.03642667,
  -0.14922994,
  -0.028246917,
  0.00294029,
  -0.028278569,
  -0.00031151494,
  -0.028561834,
  -0.015642446,
  -0.0033069465,
  0.039262388,
  0.073648565,
  0.30555972,
  0.033346426,
  0.032417253,
  -0.030150896,
  0.073720865,
  -0.03255868,
  0.005349842,
  0.0048314445,
  0.00032458417,
  -0.021801919,
  -0.018524932,
  -0.031910975,
  0.0061979895,
  0.03291013,
  0.0182857,
  0.05128744,
  -0.060227234,
  -0.015408525,
  0.048075695,
  0.026021654,
  0.008008963,
  0.017790588,
  0.0048249396,
  -0.023229279,
  -0.02076592,
  -0.011923052,
  -0.0049590776,
  0.030895416,
  0.0071928767,
  0.021544082,
  0.00794731,
  0.0045584375,
  0.021935519,
  -0.0030565087,
  -0.04007751,
  0.0072690425,
  0.006807841,
  -0.039283942,
  -0.016751656,
  0.022391401,
  -0.030006437,
  -0.021088991,
  0.030172776,
  0.01925516,
  0.0415842,
  0.025542352,
  0.024600163,
  -0.025949534,
  -0.037388265,
  0.029131478,
  -0.037146445,
  -0.0042820526,
  -0.0044486485,
  0.014348312,
  -0.009164729,
  -0.016430087,
  0.0027597,
  -0.051079314,
  0.024986243,
  0.033393387,
  0.020908948,
  0.0623419,
  -0.021023996,
  -0.041090515,
  -0.023160461,
  -0.008906179,
  0.015737936,
  -0.004730726,
  -0.008134597,
  0.0381327,
  0.0083448365,
  -0.041051954,
  -0.019731767,
  0.01997418,
  0.029300012,
  0.014527425,
  0.004087756,
  0.030718744,
  0.018336209,
  0.01985848,
  0.0026524235,
  -0.022996109,
  -0.040013786,
  -0.032847404,
  -0.009666706,
  -0.017328374,
  -0.0047005867,
  0.07286257,
  0.029017853,
  -0.027826004,
  0.03088135,
  0.0039099487,
  -0.05238098,
  0.020412818,
  -0.047311977,
  -0.055919576,
  0.028725293,
  -0.016556734,
  -0.015442391,
  0.01789275,
  -0.030860165,
  0.00037813836,
  -0.04411114,
  0.06464235,
  0.021878205,
  -0.036628313,
  0.006460182,
  -0.00014959167,
  0.013352282,
  0.019025493,
  0.027055077,
  -0.021064332,
  0.026030306,
  0.039356876,
  0.010671941,
  0.012244259,
  0.018610606,
  -0.009453336,
  0.030056193,
  0.008376459,
  -0.029269494,
  -0.046163626,
  -0.016707808,
  0.05149172,
  -0.0004296639,
  0.01922538,
  -0.02648712,
  0.014763846,
  -0.019442154,
  0.018361079,
  -0.0013559518,
  -0.018726807,
  -0.00053384557,
  0.053640965,
  0.065491475,
  0.0056911074,
  0.054243166,
  -0.0020235574,
  -0.013018479,
  0.045204446,
  0.006158983,
  0.025155023,
  -0.0070082447,
  -0.009661016,
  -0.013117978,
  0.019861551,
  -0.020361846,
  -0.0128879,
  -0.0013944322,
  0.018099874,
  0.0055428906,
  -0.01469709,
  -0.000014971983,
  -0.023135033,
  -0.016745402,
  0.0016716731,
  -0.032241035,
  -0.035283826,
  0.024723385,
  -0.00935058,
  0.014869176,
  0.029794183,
  0.075513326,
  0.12633172,
  0.026478203,
  -0.0038659489,
  0.010339518,
  0.043841112,
  0.0075575043,
  -0.008861499,
  0.0057836175,
  -0.034817975,
  -0.035664424,
  0.00891008,
  0.016974645,
  -0.0218359,
  -0.008139394,
  0.023770466,
  -0.02786345,
  0.036499992,
  0.06553916,
  0.00636152,
  0.006697265,
  -0.013035399,
  0.024151614,
  -0.017860677,
  0.013207234,
  -0.011449451,
  0.016117128,
  -0.017444935,
  0.014809877,
  0.053789537,
  -0.002032969,
  -0.021832388,
  0.04925754,
  -0.026106479,
  0.041987598,
  0.0132713765,
  -0.017800152,
  -0.043730866,
  -0.013001231,
  0.003842228,
  0.022036353,
  -0.030558832,
  -0.026698878,
  -0.023517268,
  0.0011036105,
  -0.016480653,
  -0.013930081,
  0.028024752,
  0.010193769,
  -0.038880777,
  -0.015026466,
  0.021865772,
  -0.020322867,
  -0.028457686,
  0.0121673765,
  0.046574056,
  -0.028451476,
  -0.038290117,
  -0.004126179,
  0.0073566413,
  0.06328551,
  -0.053586356,
  0.01348283,
  -0.009372224,
  0.047734153,
  -0.029718664,
  -0.017957311,
  0.024366671,
  0.00038854824,
  -0.027755074,
  0.0062397015,
  -0.015224107,
  0.046232134,
  -0.03310224,
  -0.026330186,
  0.01785415,
  -0.015088509,
  0.035948828,
  0.005287949,
  -0.0039667436,
  0.004444719,
  0.05423982,
  0.006520454,
  0.010328155,
  0.027840048,
  -0.045529295,
  0.0077701514,
  0.006600639,
  -0.06761529,
  0.0056811473,
  0.03611592,
  -0.025570968,
  -0.0422498,
  0.018868644,
  0.023924276,
  -0.00452581,
  -0.036659595,
  0.023667302,
  0.0044012372,
  0.034776166,
  -0.010890701,
  -0.0148946475,
  -0.018588085,
  -0.00936958,
  0.035587303,
  0.0063421284,
  -0.016434658,
  -0.024883663,
  0.021376904,
  -0.0074684545,
  0.023650132,
  -0.0030113778,
  -0.018074531,
  0.031209398,
  -0.022836555,
  0.034231618,
  0.019035552,
  0.005840156,
  -0.057343118,
  0.009626367,
  -0.0350932,
  0.039624464,
  -0.007863393,
  -0.001345397,
  0.025608033,
  -0.013190005,
  -0.008396385,
  -0.008355686,
  -0.0027002336,
  -0.03474372,
  -0.040733106,
  0.018405523,
  -0.04677195,
  0.04512251,
  -0.009523362,
  0.0135085825,
  -0.039295126,
  0.008816639,
  -0.019147161,
  0.050016277,
  -0.013271826,
  -0.018226197,
  -0.0004208431,
  -0.0009348703,
  -0.008225479,
  -0.019610288,
  0.019781938,
  -0.0022501776,
  -0.013031737,
  -0.036474798,
  -0.0028121378,
  -0.021379223,
  0.0387022,
  -0.018510222,
  0.03142811,
  -0.062358662,
  -0.009643623,
  0.040097468,
  0.046088852,
  0.016391188,
  0.039585963,
  0.035732035,
  0.045156162,
  -0.015466972,
  -0.0062326435,
  -0.0044605723,
  -0.023641014,
  -0.0025102631,
  -0.02804915,
  0.030316882,
  0.0075768777,
  -0.053215403,
  -0.017338224,
  -0.022204785,
  0.054142844,
  0.02442842,
  -0.029759366,
  -0.037938483,
  -0.023520447,
  0.071666956,
  0.009142069,
  -0.019743338,
  0.007091727,
  -0.012135239,
  -0.00091834867,
  -0.015332468,
  0.030312857,
  0.0047971345,
  -0.016171021,
  0.030237738,
  -0.036900196,
  -0.027820894,
  0.03161851,
  0.030564306,
  -0.037563182,
  -0.020743731,
  0.00723575,
  -0.0034293872,
  -0.022671359,
  0.053060647,
  0.004430129,
  0.015102925,
  0.027057819,
  0.018593183,
  -0.03236886,
  0.053305257,
  0.0071938657,
  -0.0024120759,
  -0.0048797666,
  0.040714692,
  0.0082616145,
  0.0045925765,
  -0.053526506,
  0.02972987,
  -0.010869665,
  0.0022602992,
  0.02508709,
  0.014644995,
  -0.0023726653,
  -0.050012384,
  -0.028790193,
  -0.043853424,
  0.018869298,
  -0.0335513,
  -0.012590997,
  0.0066764606,
  -0.002177006,
  0.017686278,
  -0.032091685,
  -0.030381594,
  -0.028988672,
  -0.0043685334,
  -0.19601347,
  0.024138112,
  -0.009613194,
  -0.012327065,
  -0.017078161,
  -0.010793456,
  -0.019551327,
  -0.008812141,
  0.016599972,
  0.00008988066,
  -0.039879736,
  0.03170808,
  -0.00005249249,
  -0.041465968,
  0.0474765,
  -0.0024296169,
  -0.0075569255,
  -0.0039090826,
  0.0043218043,
  0.038181737,
  0.017228879,
  -0.0056666965,
  0.025013775,
  0.011159141,
  0.06135363,
  -0.014517336,
  -0.020243455,
  0.00292658,
  -0.029655289,
  -0.022527033,
  -0.013030612,
  -0.059950564,
  0.00022637159,
  0.009870713,
  -0.013099324,
  0.02379806,
  -0.0037634023,
  -0.0034948476,
  0.010573829,
  0.007586072,
  -0.017368196,
  0.0073617143,
  -0.05766283,
  0.00041824303,
  -0.04631778,
  0.021285545,
  -0.039989844,
  -0.043034386,
  -0.036568485,
  -0.0549506,
  0.01219505,
  -0.017824685,
  0.00089092215,
  0.024944775,
  -0.021443883,
  -0.014412883,
  -0.009493901,
  0.014294137,
  -0.012371945,
  0.031888764,
  -0.026009684,
  -0.01696971,
  -0.004908054,
  -0.07058094,
  -0.06314025,
  0.0008589997,
  -0.058544014,
  0.015329897,
  0.026659481,
  0.016187247,
  -0.007063368,
  -0.031983346,
  0.044639546,
  -0.014208329,
  0.019260643,
  -0.0054603308,
  0.018891092,
  -0.02238762,
  -0.03734214,
  0.013318947,
  -0.02530858,
  -0.032743633,
  -0.026020043,
  -0.015594075,
  -0.020505663,
  -0.002266781,
  -0.012095692,
  0.0067746174,
  -0.07546982,
  0.0040725134,
  -0.039307848,
  -0.0271055,
  -0.042825673,
  0.017372284,
  -0.024170304,
  -0.0027705112,
  -0.0129009895,
  -0.03856964,
  -0.020337652,
  -0.002390748,
  -0.021245906,
  -0.037413437,
  0.005886311,
  -0.02796163,
  0.0007066425,
  0.010551715,
  -0.00031993128,
  -0.014460644,
  0.0073531615,
  -0.00084766385,
  -0.035212755,
  -0.034534954,
  0.0053194924,
  0.023093853,
  0.04039603,
  0.02280827,
  -0.0020615144,
  -0.001829581,
  -0.0066550975,
  0.038915943,
  -0.043355078,
  0.0054669287,
  0.012519742,
  -0.041817762,
  -0.010449888,
  -0.011070965,
  0.013394426,
  0.014622529,
  -0.014017406,
  -0.04064007,
  0.034554064,
  -0.027782766,
  0.030677343,
  0.005160858,
  0.009487385,
  -0.002348627,
  -0.01922817,
  0.010623029,
  -0.050608218,
  -0.031557772,
  -0.01711053,
  0.017789515,
  0.010002852,
  -0.045369808,
  -0.016609317,
  0.005166705,
  0.04726733,
  0.0017104974,
  -0.036056574,
  -0.016848048,
  0.03232318,
  0.039878614,
  0.0018391074,
  0.012942271,
  -0.034168,
  -0.013163527,
  -0.0061449236,
  0.014930467,
  0.0482148,
  0.02692591,
  -0.00082051445,
  0.013749203,
  -0.026384888,
  -0.014447248,
  -0.008575848,
  0.036008008,
  0.0034129869,
  -0.001337549,
  -0.009111934,
  -0.057143394,
  -0.002023031,
  0.035943788,
  -0.035881564,
  0.021573164,
  0.059323177,
  -0.006293189,
  0.015798388,
  0.047867917,
  0.042718187,
  0.00047008504,
  0.03895299,
  0.0070030894,
  0.034475427,
  0.027069265,
  -0.038811505,
  -0.022347674,
  -0.0036512986,
  -0.0016905298,
  0.010702239,
  0.020945696,
  -0.018742444,
  0.022709914,
  0.006675667,
  -0.019669013,
  0.06406448,
  0.05420055,
  0.012572921,
  0.011896075,
  0.012408049,
  0.003918703,
  -0.021831654,
  -0.0331638,
  0.012143161,
  -0.035627656,
  -0.0017671047,
  0.03108699,
  -0.017562052,
  0.00008358474,
  -0.014061915,
  0.007862622,
  0.021937687,
  -0.03164676,
  0.015698554,
  0.028230492,
  -0.0031735834,
  0.03840146,
  -0.012075926,
  -0.018366782,
  -0.015970737,
  -0.0016141593,
  -0.04978215,
  -0.010410908,
  -0.046299987,
  0.0038824233,
  -0.012343668,
  0.010781683,
  -0.02399493,
  0.02565838,
  0.018806688,
  0.00021724716,
  -0.021614404,
  -0.00538639,
  -0.0056053516,
  0.02687011,
  0.008406284,
  -0.041691553,
  0.034371395,
  0.03595283,
  0.02149608,
  -0.004842879,
  -0.011119636,
  0.02644182,
  -0.032997318,
  0.016327105,
]
`;

exports[`generate_embeddings should generate embeddings for 1 string/batch:true 1`] = `
[
  [
    -0.040223494,
    0.036910173,
    -0.029072426,
    0.01620091,
    -0.035772048,
    -0.04076332,
    -0.055214636,
    -0.040958237,
    0.003247558,
    0.0019827713,
    -0.00666854,
    0.0116274115,
    0.021592887,
    -0.013407999,
    0.030296259,
    0.0042019538,
    0.020469557,
    -0.022949385,
    -0.02201794,
    -0.03109984,
    -0.050929394,
    -0.017461233,
    0.012290435,
    -0.014042799,
    0.015395629,
    0.041218746,
    -0.036899615,
    -0.0006291881,
    0.00036546998,
    -0.06098459,
    0.037168358,
    0.08009707,
    -0.017955288,
    -0.04980442,
    -0.03419127,
    -0.035745367,
    0.004458627,
    0.00081524585,
    -0.06881104,
    0.010894425,
    0.015911995,
    0.022516698,
    0.023183638,
    -0.05889619,
    0.002168551,
    -0.044268668,
    -0.04046761,
    -0.002440914,
    0.0032916146,
    -0.06478305,
    0.009072804,
    0.03206246,
    0.037781913,
    -0.001057974,
    0.0034809366,
    0.02224112,
    -0.016867235,
    -0.023028448,
    -0.062129,
    0.0019882624,
    -0.020531269,
    -0.009342835,
    -0.0035411431,
    -0.00788465,
    0.002988684,
    0.15492971,
    0.030647403,
    -0.013308477,
    -0.004863455,
    -0.015082439,
    -0.018025309,
    -0.012127098,
    -0.0009241285,
    0.022337198,
    -0.06574847,
    0.04704821,
    -0.015045466,
    -0.011313654,
    0.013529516,
    0.036275294,
    0.07957706,
    -0.004288955,
    -0.00016959794,
    0.017653687,
    -0.013293977,
    0.047866434,
    0.014952005,
    0.036797117,
    -0.004336811,
    -0.013558303,
    -0.037311915,
    -0.02313383,
    0.027804252,
    -0.051471755,
    -0.028470213,
    0.016755445,
    -0.0055215294,
    0.019557206,
    0.036271956,
    0.033139374,
    0.04892908,
    0.018777413,
    0.009225647,
    -0.01303223,
    0.0026263122,
    0.0041349004,
    0.026712917,
    0.02685435,
    0.022832995,
    0.0132132135,
    0.048743,
    0.02738433,
    0.020036452,
    0.02199094,
    0.013213266,
    -0.008269891,
    0.0028213186,
    -0.016591176,
    -0.0040015145,
    -0.022262264,
    -0.0076761497,
    0.02666505,
    0.023431187,
    0.009735227,
    0.028961232,
    -0.049734734,
    0.008873205,
    0.034977853,
    -0.017548975,
    -0.02679054,
    0.06384383,
    0.0069157765,
    -0.034251057,
    0.0045064865,
    -0.006364648,
    -0.030602371,
    -0.0026401146,
    -0.025854437,
    -0.013344763,
    -0.028475752,
    0.022518668,
    0.06846874,
    -0.021445045,
    -0.014992474,
    -0.013668433,
    -0.052522838,
    -0.028572522,
    0.014152912,
    0.018677576,
    -0.041450456,
    -0.0039821933,
    -0.021429459,
    0.033647884,
    0.0468145,
    0.032547835,
    0.003226234,
    -0.042875435,
    0.032136783,
    -0.0054103835,
    -0.014403589,
    0.013746957,
    -0.005504929,
    -0.04080636,
    -0.013715998,
    -0.0023966802,
    0.004317579,
    0.036359716,
    0.02484958,
    0.0036225736,
    0.0038093324,
    -0.0128902495,
    -0.00989117,
    0.02657123,
    -0.02004453,
    -0.015467018,
    0.023334084,
    0.056861002,
    0.024352059,
    0.017912382,
    -0.036585413,
    -0.042832654,
    0.0065943464,
    -0.00043394277,
    -0.023205237,
    -0.04481378,
    0.034812726,
    -0.029750895,
    -0.009519412,
    0.023950947,
    0.0108516645,
    0.0013421407,
    -0.009194147,
    0.031681787,
    -0.038750697,
    0.0075795697,
    0.007997994,
    0.0040703285,
    -0.01185898,
    -0.030216528,
    -0.00092430616,
    -0.03326987,
    -0.0043656155,
    -0.004172702,
    0.07070254,
    -0.0630661,
    0.0006202437,
    -0.012102176,
    -0.0098432265,
    0.030897569,
    -0.019122427,
    0.021461759,
    0.03370573,
    0.025960753,
    -0.0218747,
    -0.060582917,
    0.013210318,
    -0.04244365,
    0.0018250066,
    -0.004718639,
    -0.017809791,
    0.012653244,
    -0.01643057,
    -0.004954422,
    0.018837256,
    0.014209665,
    0.0060657035,
    0.009076278,
    0.0042796494,
    0.023370704,
    0.01362946,
    0.037219122,
    -0.0076780417,
    0.0033769505,
    -0.028068798,
    -0.008844272,
    -0.019027423,
    -0.055774488,
    -0.0011853062,
    0.0369704,
    0.008710457,
    -0.003702908,
    -0.009777154,
    -0.01151059,
    -0.0072179437,
    -0.042655986,
    0.05371848,
    -0.009385003,
    0.013167632,
    0.0036928435,
    0.0054824254,
    0.0124827465,
    -0.025427278,
    -0.0034876808,
    0.026318392,
    0.066196814,
    0.00057881634,
    -0.010478483,
    -0.010165479,
    -0.0052919397,
    -0.024490291,
    0.023439089,
    -0.060232025,
    0.013613779,
    0.05238485,
    0.02742825,
    0.009827107,
    -0.023323307,
    -0.014748259,
    0.018340174,
    0.008516631,
    0.015711766,
    -0.06771214,
    -0.010658552,
    -0.019776905,
    -0.007950745,
    0.016271098,
    -0.012776468,
    -0.04696763,
    0.0203838,
    0.0128400475,
    0.042937115,
    -0.0032076268,
    0.036121644,
    -0.017869536,
    -0.0012877882,
    0.017093716,
    -0.06802191,
    0.014688999,
    0.029801363,
    -0.04731412,
    0.016147185,
    0.056355268,
    0.030687867,
    -0.008921309,
    0.021186918,
    -0.0033205329,
    -0.010277796,
    -0.16280085,
    0.0033566002,
    0.013467126,
    -0.04851665,
    0.007291625,
    -0.03249049,
    -0.032293443,
    0.047209937,
    -0.0014013714,
    0.020064324,
    -0.026038907,
    -0.0010579019,
    -0.037636608,
    0.032780156,
    -0.02075346,
    0.0269249,
    0.009221672,
    -0.03529381,
    0.058765456,
    -0.056221098,
    0.004809797,
    -0.010666879,
    0.07082909,
    -0.030068832,
    0.022619823,
    0.0021392542,
    0.035419416,
    -0.04316011,
    -0.053454395,
    0.002246863,
    -0.03243077,
    0.011656234,
    -0.0064708726,
    0.021072635,
    0.024108421,
    0.050854597,
    0.023031052,
    -0.037844222,
    0.004458516,
    0.020019948,
    0.0045154155,
    0.01569389,
    0.0051477137,
    0.023567485,
    -0.018055364,
    -0.045970283,
    -0.03655653,
    0.004138227,
    -0.013965852,
    -0.0017617985,
    -0.014458689,
    -0.0041283485,
    -0.022019248,
    -0.056299303,
    -0.018144485,
    0.013029218,
    -0.032033566,
    0.017988667,
    -0.01263482,
    -0.010691798,
    -0.014436746,
    -0.037939075,
    0.018391315,
    0.0030770446,
    -0.014009116,
    0.018493747,
    0.018158842,
    -0.029859683,
    0.016019218,
    -0.015132705,
    0.020267934,
    0.0024080526,
    0.0034028853,
    -0.031878702,
    0.016926268,
    -0.010497388,
    0.034737594,
    -0.009953177,
    -0.03642667,
    -0.14922994,
    -0.028246917,
    0.00294029,
    -0.028278569,
    -0.00031151494,
    -0.028561834,
    -0.015642446,
    -0.0033069465,
    0.039262388,
    0.073648565,
    0.30555972,
    0.033346426,
    0.032417253,
    -0.030150896,
    0.073720865,
    -0.03255868,
    0.005349842,
    0.0048314445,
    0.00032458417,
    -0.021801919,
    -0.018524932,
    -0.031910975,
    0.0061979895,
    0.03291013,
    0.0182857,
    0.05128744,
    -0.060227234,
    -0.015408525,
    0.048075695,
    0.026021654,
    0.008008963,
    0.017790588,
    0.0048249396,
    -0.023229279,
    -0.02076592,
    -0.011923052,
    -0.0049590776,
    0.030895416,
    0.0071928767,
    0.021544082,
    0.00794731,
    0.0045584375,
    0.021935519,
    -0.0030565087,
    -0.04007751,
    0.0072690425,
    0.006807841,
    -0.039283942,
    -0.016751656,
    0.022391401,
    -0.030006437,
    -0.021088991,
    0.030172776,
    0.01925516,
    0.0415842,
    0.025542352,
    0.024600163,
    -0.025949534,
    -0.037388265,
    0.029131478,
    -0.037146445,
    -0.0042820526,
    -0.0044486485,
    0.014348312,
    -0.009164729,
    -0.016430087,
    0.0027597,
    -0.051079314,
    0.024986243,
    0.033393387,
    0.020908948,
    0.0623419,
    -0.021023996,
    -0.041090515,
    -0.023160461,
    -0.008906179,
    0.015737936,
    -0.004730726,
    -0.008134597,
    0.0381327,
    0.0083448365,
    -0.041051954,
    -0.019731767,
    0.01997418,
    0.029300012,
    0.014527425,
    0.004087756,
    0.030718744,
    0.018336209,
    0.01985848,
    0.0026524235,
    -0.022996109,
    -0.040013786,
    -0.032847404,
    -0.009666706,
    -0.017328374,
    -0.0047005867,
    0.07286257,
    0.029017853,
    -0.027826004,
    0.03088135,
    0.0039099487,
    -0.05238098,
    0.020412818,
    -0.047311977,
    -0.055919576,
    0.028725293,
    -0.016556734,
    -0.015442391,
    0.01789275,
    -0.030860165,
    0.00037813836,
    -0.04411114,
    0.06464235,
    0.021878205,
    -0.036628313,
    0.006460182,
    -0.00014959167,
    0.013352282,
    0.019025493,
    0.027055077,
    -0.021064332,
    0.026030306,
    0.039356876,
    0.010671941,
    0.012244259,
    0.018610606,
    -0.009453336,
    0.030056193,
    0.008376459,
    -0.029269494,
    -0.046163626,
    -0.016707808,
    0.05149172,
    -0.0004296639,
    0.01922538,
    -0.02648712,
    0.014763846,
    -0.019442154,
    0.018361079,
    -0.0013559518,
    -0.018726807,
    -0.00053384557,
    0.053640965,
    0.065491475,
    0.0056911074,
    0.054243166,
    -0.0020235574,
    -0.013018479,
    0.045204446,
    0.006158983,
    0.025155023,
    -0.0070082447,
    -0.009661016,
    -0.013117978,
    0.019861551,
    -0.020361846,
    -0.0128879,
    -0.0013944322,
    0.018099874,
    0.0055428906,
    -0.01469709,
    -0.000014971983,
    -0.023135033,
    -0.016745402,
    0.0016716731,
    -0.032241035,
    -0.035283826,
    0.024723385,
    -0.00935058,
    0.014869176,
    0.029794183,
    0.075513326,
    0.12633172,
    0.026478203,
    -0.0038659489,
    0.010339518,
    0.043841112,
    0.0075575043,
    -0.008861499,
    0.0057836175,
    -0.034817975,
    -0.035664424,
    0.00891008,
    0.016974645,
    -0.0218359,
    -0.008139394,
    0.023770466,
    -0.02786345,
    0.036499992,
    0.06553916,
    0.00636152,
    0.006697265,
    -0.013035399,
    0.024151614,
    -0.017860677,
    0.013207234,
    -0.011449451,
    0.016117128,
    -0.017444935,
    0.014809877,
    0.053789537,
    -0.002032969,
    -0.021832388,
    0.04925754,
    -0.026106479,
    0.041987598,
    0.0132713765,
    -0.017800152,
    -0.043730866,
    -0.013001231,
    0.003842228,
    0.022036353,
    -0.030558832,
    -0.026698878,
    -0.023517268,
    0.0011036105,
    -0.016480653,
    -0.013930081,
    0.028024752,
    0.010193769,
    -0.038880777,
    -0.015026466,
    0.021865772,
    -0.020322867,
    -0.028457686,
    0.0121673765,
    0.046574056,
    -0.028451476,
    -0.038290117,
    -0.004126179,
    0.0073566413,
    0.06328551,
    -0.053586356,
    0.01348283,
    -0.009372224,
    0.047734153,
    -0.029718664,
    -0.017957311,
    0.024366671,
    0.00038854824,
    -0.027755074,
    0.0062397015,
    -0.015224107,
    0.046232134,
    -0.03310224,
    -0.026330186,
    0.01785415,
    -0.015088509,
    0.035948828,
    0.005287949,
    -0.0039667436,
    0.004444719,
    0.05423982,
    0.006520454,
    0.010328155,
    0.027840048,
    -0.045529295,
    0.0077701514,
    0.006600639,
    -0.06761529,
    0.0056811473,
    0.03611592,
    -0.025570968,
    -0.0422498,
    0.018868644,
    0.023924276,
    -0.00452581,
    -0.036659595,
    0.023667302,
    0.0044012372,
    0.034776166,
    -0.010890701,
    -0.0148946475,
    -0.018588085,
    -0.00936958,
    0.035587303,
    0.0063421284,
    -0.016434658,
    -0.024883663,
    0.021376904,
    -0.0074684545,
    0.023650132,
    -0.0030113778,
    -0.018074531,
    0.031209398,
    -0.022836555,
    0.034231618,
    0.019035552,
    0.005840156,
    -0.057343118,
    0.009626367,
    -0.0350932,
    0.039624464,
    -0.007863393,
    -0.001345397,
    0.025608033,
    -0.013190005,
    -0.008396385,
    -0.008355686,
    -0.0027002336,
    -0.03474372,
    -0.040733106,
    0.018405523,
    -0.04677195,
    0.04512251,
    -0.009523362,
    0.0135085825,
    -0.039295126,
    0.008816639,
    -0.019147161,
    0.050016277,
    -0.013271826,
    -0.018226197,
    -0.0004208431,
    -0.0009348703,
    -0.008225479,
    -0.019610288,
    0.019781938,
    -0.0022501776,
    -0.013031737,
    -0.036474798,
    -0.0028121378,
    -0.021379223,
    0.0387022,
    -0.018510222,
    0.03142811,
    -0.062358662,
    -0.009643623,
    0.040097468,
    0.046088852,
    0.016391188,
    0.039585963,
    0.035732035,
    0.045156162,
    -0.015466972,
    -0.0062326435,
    -0.0044605723,
    -0.023641014,
    -0.0025102631,
    -0.02804915,
    0.030316882,
    0.0075768777,
    -0.053215403,
    -0.017338224,
    -0.022204785,
    0.054142844,
    0.02442842,
    -0.029759366,
    -0.037938483,
    -0.023520447,
    0.071666956,
    0.009142069,
    -0.019743338,
    0.007091727,
    -0.012135239,
    -0.00091834867,
    -0.015332468,
    0.030312857,
    0.0047971345,
    -0.016171021,
    0.030237738,
    -0.036900196,
    -0.027820894,
    0.03161851,
    0.030564306,
    -0.037563182,
    -0.020743731,
    0.00723575,
    -0.0034293872,
    -0.022671359,
    0.053060647,
    0.004430129,
    0.015102925,
    0.027057819,
    0.018593183,
    -0.03236886,
    0.053305257,
    0.0071938657,
    -0.0024120759,
    -0.0048797666,
    0.040714692,
    0.0082616145,
    0.0045925765,
    -0.053526506,
    0.02972987,
    -0.010869665,
    0.0022602992,
    0.02508709,
    0.014644995,
    -0.0023726653,
    -0.050012384,
    -0.028790193,
    -0.043853424,
    0.018869298,
    -0.0335513,
    -0.012590997,
    0.0066764606,
    -0.002177006,
    0.017686278,
    -0.032091685,
    -0.030381594,
    -0.028988672,
    -0.0043685334,
    -0.19601347,
    0.024138112,
    -0.009613194,
    -0.012327065,
    -0.017078161,
    -0.010793456,
    -0.019551327,
    -0.008812141,
    0.016599972,
    0.00008988066,
    -0.039879736,
    0.03170808,
    -0.00005249249,
    -0.041465968,
    0.0474765,
    -0.0024296169,
    -0.0075569255,
    -0.0039090826,
    0.0043218043,
    0.038181737,
    0.017228879,
    -0.0056666965,
    0.025013775,
    0.011159141,
    0.06135363,
    -0.014517336,
    -0.020243455,
    0.00292658,
    -0.029655289,
    -0.022527033,
    -0.013030612,
    -0.059950564,
    0.00022637159,
    0.009870713,
    -0.013099324,
    0.02379806,
    -0.0037634023,
    -0.0034948476,
    0.010573829,
    0.007586072,
    -0.017368196,
    0.0073617143,
    -0.05766283,
    0.00041824303,
    -0.04631778,
    0.021285545,
    -0.039989844,
    -0.043034386,
    -0.036568485,
    -0.0549506,
    0.01219505,
    -0.017824685,
    0.00089092215,
    0.024944775,
    -0.021443883,
    -0.014412883,
    -0.009493901,
    0.014294137,
    -0.012371945,
    0.031888764,
    -0.026009684,
    -0.01696971,
    -0.004908054,
    -0.07058094,
    -0.06314025,
    0.0008589997,
    -0.058544014,
    0.015329897,
    0.026659481,
    0.016187247,
    -0.007063368,
    -0.031983346,
    0.044639546,
    -0.014208329,
    0.019260643,
    -0.0054603308,
    0.018891092,
    -0.02238762,
    -0.03734214,
    0.013318947,
    -0.02530858,
    -0.032743633,
    -0.026020043,
    -0.015594075,
    -0.020505663,
    -0.002266781,
    -0.012095692,
    0.0067746174,
    -0.07546982,
    0.0040725134,
    -0.039307848,
    -0.0271055,
    -0.042825673,
    0.017372284,
    -0.024170304,
    -0.0027705112,
    -0.0129009895,
    -0.03856964,
    -0.020337652,
    -0.002390748,
    -0.021245906,
    -0.037413437,
    0.005886311,
    -0.02796163,
    0.0007066425,
    0.010551715,
    -0.00031993128,
    -0.014460644,
    0.0073531615,
    -0.00084766385,
    -0.035212755,
    -0.034534954,
    0.0053194924,
    0.023093853,
    0.04039603,
    0.02280827,
    -0.0020615144,
    -0.001829581,
    -0.0066550975,
    0.038915943,
    -0.043355078,
    0.0054669287,
    0.012519742,
    -0.041817762,
    -0.010449888,
    -0.011070965,
    0.013394426,
    0.014622529,
    -0.014017406,
    -0.04064007,
    0.034554064,
    -0.027782766,
    0.030677343,
    0.005160858,
    0.009487385,
    -0.002348627,
    -0.01922817,
    0.010623029,
    -0.050608218,
    -0.031557772,
    -0.01711053,
    0.017789515,
    0.010002852,
    -0.045369808,
    -0.016609317,
    0.005166705,
    0.04726733,
    0.0017104974,
    -0.036056574,
    -0.016848048,
    0.03232318,
    0.039878614,
    0.0018391074,
    0.012942271,
    -0.034168,
    -0.013163527,
    -0.0061449236,
    0.014930467,
    0.0482148,
    0.02692591,
    -0.00082051445,
    0.013749203,
    -0.026384888,
    -0.014447248,
    -0.008575848,
    0.036008008,
    0.0034129869,
    -0.001337549,
    -0.009111934,
    -0.057143394,
    -0.002023031,
    0.035943788,
    -0.035881564,
    0.021573164,
    0.059323177,
    -0.006293189,
    0.015798388,
    0.047867917,
    0.042718187,
    0.00047008504,
    0.03895299,
    0.0070030894,
    0.034475427,
    0.027069265,
    -0.038811505,
    -0.022347674,
    -0.0036512986,
    -0.0016905298,
    0.010702239,
    0.020945696,
    -0.018742444,
    0.022709914,
    0.006675667,
    -0.019669013,
    0.06406448,
    0.05420055,
    0.012572921,
    0.011896075,
    0.012408049,
    0.003918703,
    -0.021831654,
    -0.0331638,
    0.012143161,
    -0.035627656,
    -0.0017671047,
    0.03108699,
    -0.017562052,
    0.00008358474,
    -0.014061915,
    0.007862622,
    0.021937687,
    -0.03164676,
    0.015698554,
    0.028230492,
    -0.0031735834,
    0.03840146,
    -0.012075926,
    -0.018366782,
    -0.015970737,
    -0.0016141593,
    -0.04978215,
    -0.010410908,
    -0.046299987,
    0.0038824233,
    -0.012343668,
    0.010781683,
    -0.02399493,
    0.02565838,
    0.018806688,
    0.00021724716,
    -0.021614404,
    -0.00538639,
    -0.0056053516,
    0.02687011,
    0.008406284,
    -0.041691553,
    0.034371395,
    0.03595283,
    0.02149608,
    -0.004842879,
    -0.011119636,
    0.02644182,
    -0.032997318,
    0.016327105,
  ],
]
`;

exports[`generate_embeddings should generate embeddings for 2 strings/batch:true 1`] = `
[
  [
    -0.040223494,
    0.036910173,
    -0.029072426,
    0.01620091,
    -0.035772048,
    -0.04076332,
    -0.055214636,
    -0.040958237,
    0.003247558,
    0.0019827713,
    -0.00666854,
    0.0116274115,
    0.021592887,
    -0.013407999,
    0.030296259,
    0.0042019538,
    0.020469557,
    -0.022949385,
    -0.02201794,
    -0.03109984,
    -0.050929394,
    -0.017461233,
    0.012290435,
    -0.014042799,
    0.015395629,
    0.041218746,
    -0.036899615,
    -0.0006291881,
    0.00036546998,
    -0.06098459,
    0.037168358,
    0.08009707,
    -0.017955288,
    -0.04980442,
    -0.03419127,
    -0.035745367,
    0.004458627,
    0.00081524585,
    -0.06881104,
    0.010894425,
    0.015911995,
    0.022516698,
    0.023183638,
    -0.05889619,
    0.002168551,
    -0.044268668,
    -0.04046761,
    -0.002440914,
    0.0032916146,
    -0.06478305,
    0.009072804,
    0.03206246,
    0.037781913,
    -0.001057974,
    0.0034809366,
    0.02224112,
    -0.016867235,
    -0.023028448,
    -0.062129,
    0.0019882624,
    -0.020531269,
    -0.009342835,
    -0.0035411431,
    -0.00788465,
    0.002988684,
    0.15492971,
    0.030647403,
    -0.013308477,
    -0.004863455,
    -0.015082439,
    -0.018025309,
    -0.012127098,
    -0.0009241285,
    0.022337198,
    -0.06574847,
    0.04704821,
    -0.015045466,
    -0.011313654,
    0.013529516,
    0.036275294,
    0.07957706,
    -0.004288955,
    -0.00016959794,
    0.017653687,
    -0.013293977,
    0.047866434,
    0.014952005,
    0.036797117,
    -0.004336811,
    -0.013558303,
    -0.037311915,
    -0.02313383,
    0.027804252,
    -0.051471755,
    -0.028470213,
    0.016755445,
    -0.0055215294,
    0.019557206,
    0.036271956,
    0.033139374,
    0.04892908,
    0.018777413,
    0.009225647,
    -0.01303223,
    0.0026263122,
    0.0041349004,
    0.026712917,
    0.02685435,
    0.022832995,
    0.0132132135,
    0.048743,
    0.02738433,
    0.020036452,
    0.02199094,
    0.013213266,
    -0.008269891,
    0.0028213186,
    -0.016591176,
    -0.0040015145,
    -0.022262264,
    -0.0076761497,
    0.02666505,
    0.023431187,
    0.009735227,
    0.028961232,
    -0.049734734,
    0.008873205,
    0.034977853,
    -0.017548975,
    -0.02679054,
    0.06384383,
    0.0069157765,
    -0.034251057,
    0.0045064865,
    -0.006364648,
    -0.030602371,
    -0.0026401146,
    -0.025854437,
    -0.013344763,
    -0.028475752,
    0.022518668,
    0.06846874,
    -0.021445045,
    -0.014992474,
    -0.013668433,
    -0.052522838,
    -0.028572522,
    0.014152912,
    0.018677576,
    -0.041450456,
    -0.0039821933,
    -0.021429459,
    0.033647884,
    0.0468145,
    0.032547835,
    0.003226234,
    -0.042875435,
    0.032136783,
    -0.0054103835,
    -0.014403589,
    0.013746957,
    -0.005504929,
    -0.04080636,
    -0.013715998,
    -0.0023966802,
    0.004317579,
    0.036359716,
    0.02484958,
    0.0036225736,
    0.0038093324,
    -0.0128902495,
    -0.00989117,
    0.02657123,
    -0.02004453,
    -0.015467018,
    0.023334084,
    0.056861002,
    0.024352059,
    0.017912382,
    -0.036585413,
    -0.042832654,
    0.0065943464,
    -0.00043394277,
    -0.023205237,
    -0.04481378,
    0.034812726,
    -0.029750895,
    -0.009519412,
    0.023950947,
    0.0108516645,
    0.0013421407,
    -0.009194147,
    0.031681787,
    -0.038750697,
    0.0075795697,
    0.007997994,
    0.0040703285,
    -0.01185898,
    -0.030216528,
    -0.00092430616,
    -0.03326987,
    -0.0043656155,
    -0.004172702,
    0.07070254,
    -0.0630661,
    0.0006202437,
    -0.012102176,
    -0.0098432265,
    0.030897569,
    -0.019122427,
    0.021461759,
    0.03370573,
    0.025960753,
    -0.0218747,
    -0.060582917,
    0.013210318,
    -0.04244365,
    0.0018250066,
    -0.004718639,
    -0.017809791,
    0.012653244,
    -0.01643057,
    -0.004954422,
    0.018837256,
    0.014209665,
    0.0060657035,
    0.009076278,
    0.0042796494,
    0.023370704,
    0.01362946,
    0.037219122,
    -0.0076780417,
    0.0033769505,
    -0.028068798,
    -0.008844272,
    -0.019027423,
    -0.055774488,
    -0.0011853062,
    0.0369704,
    0.008710457,
    -0.003702908,
    -0.009777154,
    -0.01151059,
    -0.0072179437,
    -0.042655986,
    0.05371848,
    -0.009385003,
    0.013167632,
    0.0036928435,
    0.0054824254,
    0.0124827465,
    -0.025427278,
    -0.0034876808,
    0.026318392,
    0.066196814,
    0.00057881634,
    -0.010478483,
    -0.010165479,
    -0.0052919397,
    -0.024490291,
    0.023439089,
    -0.060232025,
    0.013613779,
    0.05238485,
    0.02742825,
    0.009827107,
    -0.023323307,
    -0.014748259,
    0.018340174,
    0.008516631,
    0.015711766,
    -0.06771214,
    -0.010658552,
    -0.019776905,
    -0.007950745,
    0.016271098,
    -0.012776468,
    -0.04696763,
    0.0203838,
    0.0128400475,
    0.042937115,
    -0.0032076268,
    0.036121644,
    -0.017869536,
    -0.0012877882,
    0.017093716,
    -0.06802191,
    0.014688999,
    0.029801363,
    -0.04731412,
    0.016147185,
    0.056355268,
    0.030687867,
    -0.008921309,
    0.021186918,
    -0.0033205329,
    -0.010277796,
    -0.16280085,
    0.0033566002,
    0.013467126,
    -0.04851665,
    0.007291625,
    -0.03249049,
    -0.032293443,
    0.047209937,
    -0.0014013714,
    0.020064324,
    -0.026038907,
    -0.0010579019,
    -0.037636608,
    0.032780156,
    -0.02075346,
    0.0269249,
    0.009221672,
    -0.03529381,
    0.058765456,
    -0.056221098,
    0.004809797,
    -0.010666879,
    0.07082909,
    -0.030068832,
    0.022619823,
    0.0021392542,
    0.035419416,
    -0.04316011,
    -0.053454395,
    0.002246863,
    -0.03243077,
    0.011656234,
    -0.0064708726,
    0.021072635,
    0.024108421,
    0.050854597,
    0.023031052,
    -0.037844222,
    0.004458516,
    0.020019948,
    0.0045154155,
    0.01569389,
    0.0051477137,
    0.023567485,
    -0.018055364,
    -0.045970283,
    -0.03655653,
    0.004138227,
    -0.013965852,
    -0.0017617985,
    -0.014458689,
    -0.0041283485,
    -0.022019248,
    -0.056299303,
    -0.018144485,
    0.013029218,
    -0.032033566,
    0.017988667,
    -0.01263482,
    -0.010691798,
    -0.014436746,
    -0.037939075,
    0.018391315,
    0.0030770446,
    -0.014009116,
    0.018493747,
    0.018158842,
    -0.029859683,
    0.016019218,
    -0.015132705,
    0.020267934,
    0.0024080526,
    0.0034028853,
    -0.031878702,
    0.016926268,
    -0.010497388,
    0.034737594,
    -0.009953177,
    -0.03642667,
    -0.14922994,
    -0.028246917,
    0.00294029,
    -0.028278569,
    -0.00031151494,
    -0.028561834,
    -0.015642446,
    -0.0033069465,
    0.039262388,
    0.073648565,
    0.30555972,
    0.033346426,
    0.032417253,
    -0.030150896,
    0.073720865,
    -0.03255868,
    0.005349842,
    0.0048314445,
    0.00032458417,
    -0.021801919,
    -0.018524932,
    -0.031910975,
    0.0061979895,
    0.03291013,
    0.0182857,
    0.05128744,
    -0.060227234,
    -0.015408525,
    0.048075695,
    0.026021654,
    0.008008963,
    0.017790588,
    0.0048249396,
    -0.023229279,
    -0.02076592,
    -0.011923052,
    -0.0049590776,
    0.030895416,
    0.0071928767,
    0.021544082,
    0.00794731,
    0.0045584375,
    0.021935519,
    -0.0030565087,
    -0.04007751,
    0.0072690425,
    0.006807841,
    -0.039283942,
    -0.016751656,
    0.022391401,
    -0.030006437,
    -0.021088991,
    0.030172776,
    0.01925516,
    0.0415842,
    0.025542352,
    0.024600163,
    -0.025949534,
    -0.037388265,
    0.029131478,
    -0.037146445,
    -0.0042820526,
    -0.0044486485,
    0.014348312,
    -0.009164729,
    -0.016430087,
    0.0027597,
    -0.051079314,
    0.024986243,
    0.033393387,
    0.020908948,
    0.0623419,
    -0.021023996,
    -0.041090515,
    -0.023160461,
    -0.008906179,
    0.015737936,
    -0.004730726,
    -0.008134597,
    0.0381327,
    0.0083448365,
    -0.041051954,
    -0.019731767,
    0.01997418,
    0.029300012,
    0.014527425,
    0.004087756,
    0.030718744,
    0.018336209,
    0.01985848,
    0.0026524235,
    -0.022996109,
    -0.040013786,
    -0.032847404,
    -0.009666706,
    -0.017328374,
    -0.0047005867,
    0.07286257,
    0.029017853,
    -0.027826004,
    0.03088135,
    0.0039099487,
    -0.05238098,
    0.020412818,
    -0.047311977,
    -0.055919576,
    0.028725293,
    -0.016556734,
    -0.015442391,
    0.01789275,
    -0.030860165,
    0.00037813836,
    -0.04411114,
    0.06464235,
    0.021878205,
    -0.036628313,
    0.006460182,
    -0.00014959167,
    0.013352282,
    0.019025493,
    0.027055077,
    -0.021064332,
    0.026030306,
    0.039356876,
    0.010671941,
    0.012244259,
    0.018610606,
    -0.009453336,
    0.030056193,
    0.008376459,
    -0.029269494,
    -0.046163626,
    -0.016707808,
    0.05149172,
    -0.0004296639,
    0.01922538,
    -0.02648712,
    0.014763846,
    -0.019442154,
    0.018361079,
    -0.0013559518,
    -0.018726807,
    -0.00053384557,
    0.053640965,
    0.065491475,
    0.0056911074,
    0.054243166,
    -0.0020235574,
    -0.013018479,
    0.045204446,
    0.006158983,
    0.025155023,
    -0.0070082447,
    -0.009661016,
    -0.013117978,
    0.019861551,
    -0.020361846,
    -0.0128879,
    -0.0013944322,
    0.018099874,
    0.0055428906,
    -0.01469709,
    -0.000014971983,
    -0.023135033,
    -0.016745402,
    0.0016716731,
    -0.032241035,
    -0.035283826,
    0.024723385,
    -0.00935058,
    0.014869176,
    0.029794183,
    0.075513326,
    0.12633172,
    0.026478203,
    -0.0038659489,
    0.010339518,
    0.043841112,
    0.0075575043,
    -0.008861499,
    0.0057836175,
    -0.034817975,
    -0.035664424,
    0.00891008,
    0.016974645,
    -0.0218359,
    -0.008139394,
    0.023770466,
    -0.02786345,
    0.036499992,
    0.06553916,
    0.00636152,
    0.006697265,
    -0.013035399,
    0.024151614,
    -0.017860677,
    0.013207234,
    -0.011449451,
    0.016117128,
    -0.017444935,
    0.014809877,
    0.053789537,
    -0.002032969,
    -0.021832388,
    0.04925754,
    -0.026106479,
    0.041987598,
    0.0132713765,
    -0.017800152,
    -0.043730866,
    -0.013001231,
    0.003842228,
    0.022036353,
    -0.030558832,
    -0.026698878,
    -0.023517268,
    0.0011036105,
    -0.016480653,
    -0.013930081,
    0.028024752,
    0.010193769,
    -0.038880777,
    -0.015026466,
    0.021865772,
    -0.020322867,
    -0.028457686,
    0.0121673765,
    0.046574056,
    -0.028451476,
    -0.038290117,
    -0.004126179,
    0.0073566413,
    0.06328551,
    -0.053586356,
    0.01348283,
    -0.009372224,
    0.047734153,
    -0.029718664,
    -0.017957311,
    0.024366671,
    0.00038854824,
    -0.027755074,
    0.0062397015,
    -0.015224107,
    0.046232134,
    -0.03310224,
    -0.026330186,
    0.01785415,
    -0.015088509,
    0.035948828,
    0.005287949,
    -0.0039667436,
    0.004444719,
    0.05423982,
    0.006520454,
    0.010328155,
    0.027840048,
    -0.045529295,
    0.0077701514,
    0.006600639,
    -0.06761529,
    0.0056811473,
    0.03611592,
    -0.025570968,
    -0.0422498,
    0.018868644,
    0.023924276,
    -0.00452581,
    -0.036659595,
    0.023667302,
    0.0044012372,
    0.034776166,
    -0.010890701,
    -0.0148946475,
    -0.018588085,
    -0.00936958,
    0.035587303,
    0.0063421284,
    -0.016434658,
    -0.024883663,
    0.021376904,
    -0.0074684545,
    0.023650132,
    -0.0030113778,
    -0.018074531,
    0.031209398,
    -0.022836555,
    0.034231618,
    0.019035552,
    0.005840156,
    -0.057343118,
    0.009626367,
    -0.0350932,
    0.039624464,
    -0.007863393,
    -0.001345397,
    0.025608033,
    -0.013190005,
    -0.008396385,
    -0.008355686,
    -0.0027002336,
    -0.03474372,
    -0.040733106,
    0.018405523,
    -0.04677195,
    0.04512251,
    -0.009523362,
    0.0135085825,
    -0.039295126,
    0.008816639,
    -0.019147161,
    0.050016277,
    -0.013271826,
    -0.018226197,
    -0.0004208431,
    -0.0009348703,
    -0.008225479,
    -0.019610288,
    0.019781938,
    -0.0022501776,
    -0.013031737,
    -0.036474798,
    -0.0028121378,
    -0.021379223,
    0.0387022,
    -0.018510222,
    0.03142811,
    -0.062358662,
    -0.009643623,
    0.040097468,
    0.046088852,
    0.016391188,
    0.039585963,
    0.035732035,
    0.045156162,
    -0.015466972,
    -0.0062326435,
    -0.0044605723,
    -0.023641014,
    -0.0025102631,
    -0.02804915,
    0.030316882,
    0.0075768777,
    -0.053215403,
    -0.017338224,
    -0.022204785,
    0.054142844,
    0.02442842,
    -0.029759366,
    -0.037938483,
    -0.023520447,
    0.071666956,
    0.009142069,
    -0.019743338,
    0.007091727,
    -0.012135239,
    -0.00091834867,
    -0.015332468,
    0.030312857,
    0.0047971345,
    -0.016171021,
    0.030237738,
    -0.036900196,
    -0.027820894,
    0.03161851,
    0.030564306,
    -0.037563182,
    -0.020743731,
    0.00723575,
    -0.0034293872,
    -0.022671359,
    0.053060647,
    0.004430129,
    0.015102925,
    0.027057819,
    0.018593183,
    -0.03236886,
    0.053305257,
    0.0071938657,
    -0.0024120759,
    -0.0048797666,
    0.040714692,
    0.0082616145,
    0.0045925765,
    -0.053526506,
    0.02972987,
    -0.010869665,
    0.0022602992,
    0.02508709,
    0.014644995,
    -0.0023726653,
    -0.050012384,
    -0.028790193,
    -0.043853424,
    0.018869298,
    -0.0335513,
    -0.012590997,
    0.0066764606,
    -0.002177006,
    0.017686278,
    -0.032091685,
    -0.030381594,
    -0.028988672,
    -0.0043685334,
    -0.19601347,
    0.024138112,
    -0.009613194,
    -0.012327065,
    -0.017078161,
    -0.010793456,
    -0.019551327,
    -0.008812141,
    0.016599972,
    0.00008988066,
    -0.039879736,
    0.03170808,
    -0.00005249249,
    -0.041465968,
    0.0474765,
    -0.0024296169,
    -0.0075569255,
    -0.0039090826,
    0.0043218043,
    0.038181737,
    0.017228879,
    -0.0056666965,
    0.025013775,
    0.011159141,
    0.06135363,
    -0.014517336,
    -0.020243455,
    0.00292658,
    -0.029655289,
    -0.022527033,
    -0.013030612,
    -0.059950564,
    0.00022637159,
    0.009870713,
    -0.013099324,
    0.02379806,
    -0.0037634023,
    -0.0034948476,
    0.010573829,
    0.007586072,
    -0.017368196,
    0.0073617143,
    -0.05766283,
    0.00041824303,
    -0.04631778,
    0.021285545,
    -0.039989844,
    -0.043034386,
    -0.036568485,
    -0.0549506,
    0.01219505,
    -0.017824685,
    0.00089092215,
    0.024944775,
    -0.021443883,
    -0.014412883,
    -0.009493901,
    0.014294137,
    -0.012371945,
    0.031888764,
    -0.026009684,
    -0.01696971,
    -0.004908054,
    -0.07058094,
    -0.06314025,
    0.0008589997,
    -0.058544014,
    0.015329897,
    0.026659481,
    0.016187247,
    -0.007063368,
    -0.031983346,
    0.044639546,
    -0.014208329,
    0.019260643,
    -0.0054603308,
    0.018891092,
    -0.02238762,
    -0.03734214,
    0.013318947,
    -0.02530858,
    -0.032743633,
    -0.026020043,
    -0.015594075,
    -0.020505663,
    -0.002266781,
    -0.012095692,
    0.0067746174,
    -0.07546982,
    0.0040725134,
    -0.039307848,
    -0.0271055,
    -0.042825673,
    0.017372284,
    -0.024170304,
    -0.0027705112,
    -0.0129009895,
    -0.03856964,
    -0.020337652,
    -0.002390748,
    -0.021245906,
    -0.037413437,
    0.005886311,
    -0.02796163,
    0.0007066425,
    0.010551715,
    -0.00031993128,
    -0.014460644,
    0.0073531615,
    -0.00084766385,
    -0.035212755,
    -0.034534954,
    0.0053194924,
    0.023093853,
    0.04039603,
    0.02280827,
    -0.0020615144,
    -0.001829581,
    -0.0066550975,
    0.038915943,
    -0.043355078,
    0.0054669287,
    0.012519742,
    -0.041817762,
    -0.010449888,
    -0.011070965,
    0.013394426,
    0.014622529,
    -0.014017406,
    -0.04064007,
    0.034554064,
    -0.027782766,
    0.030677343,
    0.005160858,
    0.009487385,
    -0.002348627,
    -0.01922817,
    0.010623029,
    -0.050608218,
    -0.031557772,
    -0.01711053,
    0.017789515,
    0.010002852,
    -0.045369808,
    -0.016609317,
    0.005166705,
    0.04726733,
    0.0017104974,
    -0.036056574,
    -0.016848048,
    0.03232318,
    0.039878614,
    0.0018391074,
    0.012942271,
    -0.034168,
    -0.013163527,
    -0.0061449236,
    0.014930467,
    0.0482148,
    0.02692591,
    -0.00082051445,
    0.013749203,
    -0.026384888,
    -0.014447248,
    -0.008575848,
    0.036008008,
    0.0034129869,
    -0.001337549,
    -0.009111934,
    -0.057143394,
    -0.002023031,
    0.035943788,
    -0.035881564,
    0.021573164,
    0.059323177,
    -0.006293189,
    0.015798388,
    0.047867917,
    0.042718187,
    0.00047008504,
    0.03895299,
    0.0070030894,
    0.034475427,
    0.027069265,
    -0.038811505,
    -0.022347674,
    -0.0036512986,
    -0.0016905298,
    0.010702239,
    0.020945696,
    -0.018742444,
    0.022709914,
    0.006675667,
    -0.019669013,
    0.06406448,
    0.05420055,
    0.012572921,
    0.011896075,
    0.012408049,
    0.003918703,
    -0.021831654,
    -0.0331638,
    0.012143161,
    -0.035627656,
    -0.0017671047,
    0.03108699,
    -0.017562052,
    0.00008358474,
    -0.014061915,
    0.007862622,
    0.021937687,
    -0.03164676,
    0.015698554,
    0.028230492,
    -0.0031735834,
    0.03840146,
    -0.012075926,
    -0.018366782,
    -0.015970737,
    -0.0016141593,
    -0.04978215,
    -0.010410908,
    -0.046299987,
    0.0038824233,
    -0.012343668,
    0.010781683,
    -0.02399493,
    0.02565838,
    0.018806688,
    0.00021724716,
    -0.021614404,
    -0.00538639,
    -0.0056053516,
    0.02687011,
    0.008406284,
    -0.041691553,
    0.034371395,
    0.03595283,
    0.02149608,
    -0.004842879,
    -0.011119636,
    0.02644182,
    -0.032997318,
    0.016327105,
  ],
  [
    -0.012115843,
    0.04306827,
    -0.04043511,
    -0.011336971,
    -0.028936567,
    -0.0071746837,
    -0.013331335,
    -0.050208364,
    0.018657835,
    -0.0032811428,
    0.0059873313,
    0.011793754,
    0.023039509,
    -0.024006378,
    0.014307369,
    -0.0015702196,
    0.013237463,
    -0.006395372,
    -0.028622176,
    -0.013228377,
    -0.045225546,
    0.013007953,
    0.04164703,
    -0.012502044,
    0.0047686435,
    0.057257965,
    -0.055418953,
    -0.0019059649,
    -0.0005287387,
    0.016458714,
    -0.0046571167,
    0.04607263,
    -0.0033910584,
    -0.03428254,
    -0.010485898,
    -0.037430987,
    0.012106779,
    -0.0452091,
    -0.049496565,
    0.022297248,
    0.026274212,
    -0.0014896949,
    0.0030374916,
    -0.051017363,
    0.020670308,
    -0.031746015,
    -0.027451552,
    0.0089889355,
    0.030812752,
    -0.06446747,
    -0.012652482,
    -0.010898349,
    0.061071735,
    -0.012682338,
    -0.0361166,
    0.0022507014,
    0.0049086646,
    -0.044419706,
    -0.060092732,
    -0.023439556,
    -0.035182375,
    -0.012872824,
    0.011453229,
    -0.03885745,
    -0.022598946,
    0.110451855,
    0.025893977,
    -0.037645463,
    0.0015071175,
    -0.011000979,
    -0.01924897,
    -0.01529949,
    -0.027141878,
    0.0060857604,
    -0.06262405,
    0.014376645,
    0.06559473,
    0.007156655,
    0.01843211,
    0.043029685,
    0.11066913,
    -0.0069780033,
    -0.0037099659,
    0.027349714,
    -0.008100424,
    0.048400268,
    0.015990296,
    0.036167722,
    -0.0045254612,
    -0.02877625,
    -0.00031896174,
    -0.057782546,
    0.0069047706,
    -0.021841401,
    -0.050290164,
    0.0070795747,
    -0.03979769,
    0.018093152,
    0.034187265,
    0.0019133805,
    0.0520221,
    0.021825774,
    0.011030552,
    -0.037302736,
    0.00752329,
    0.012639141,
    0.025307229,
    0.042667363,
    0.02508138,
    0.018850334,
    0.052741144,
    0.021869855,
    0.05225572,
    0.041722775,
    0.034277603,
    0.0021722564,
    -0.0015379494,
    -0.026053388,
    -0.015417475,
    -0.022975056,
    -0.008680202,
    0.033794735,
    -0.01413953,
    0.004629754,
    0.0059612226,
    -0.032862443,
    0.01613552,
    0.023893153,
    -0.02449084,
    -0.011172521,
    0.079445824,
    0.03126215,
    -0.007188711,
    0.004118324,
    -0.005732054,
    -0.049056396,
    0.015709257,
    -0.00014211661,
    0.00872353,
    -0.00054256665,
    0.014870189,
    0.01886053,
    -0.0020586895,
    -0.032580074,
    -0.026060106,
    -0.055343334,
    0.021196917,
    0.0065821633,
    -0.014960604,
    0.0031807604,
    0.010499736,
    0.034328096,
    -0.008196602,
    0.018540805,
    0.024717279,
    -0.009380313,
    -0.02499629,
    0.04642052,
    -0.0003206982,
    -0.025112659,
    0.02168543,
    0.030479401,
    -0.05532828,
    -0.01836815,
    0.0037413288,
    0.0136857685,
    0.006713099,
    0.01799846,
    -0.034747504,
    -0.006739786,
    -0.0034291176,
    -0.03267949,
    -0.004762148,
    -0.008010615,
    0.0006895674,
    0.0039680987,
    0.053885505,
    0.02510107,
    -0.0014006079,
    -0.06640212,
    -0.022422388,
    -0.02180402,
    0.008056001,
    -0.03206881,
    -0.028326653,
    0.018581206,
    -0.0004921418,
    0.0018604047,
    0.013318934,
    -0.017856427,
    0.00834148,
    -0.025651013,
    0.009748743,
    -0.028061388,
    0.013954629,
    0.015658231,
    -0.02271787,
    0.010280023,
    -0.013180207,
    -0.002113892,
    -0.011665752,
    0.01609866,
    -0.03528198,
    0.028764175,
    -0.06340094,
    0.008210446,
    -0.07445073,
    -0.006253015,
    0.010439871,
    -0.014831858,
    -0.028421093,
    -0.0034197147,
    0.01603935,
    -0.016827915,
    -0.04315647,
    0.01956331,
    -0.033541318,
    0.02557945,
    -0.0012809017,
    0.010790373,
    0.042428534,
    0.0020106332,
    0.018133316,
    0.01390483,
    0.019516343,
    -0.0002889777,
    0.0091590965,
    -0.0016367139,
    -0.0070099533,
    0.04303479,
    0.035521515,
    -0.0056136493,
    0.004878705,
    -0.012039684,
    -0.017095087,
    -0.02783676,
    -0.0373324,
    0.0057147853,
    -0.0042915456,
    0.0006194741,
    0.012100185,
    -0.03179513,
    -0.0003803968,
    -0.0068274084,
    -0.024653774,
    0.031127485,
    0.0048274538,
    0.0124834385,
    -0.013310014,
    0.015066912,
    -0.008522437,
    -0.032689247,
    -0.029529477,
    0.017642183,
    0.026535572,
    0.016586399,
    -0.00631538,
    -0.005613382,
    0.019803561,
    -0.031753108,
    0.03909172,
    -0.04100857,
    0.039854906,
    0.042429727,
    0.0028870748,
    0.020892177,
    -0.014641071,
    0.016074844,
    -0.012719418,
    0.0066200565,
    0.02799462,
    -0.061831206,
    -0.00840258,
    -0.0033414243,
    -0.03628549,
    0.010890965,
    0.015482754,
    -0.052635092,
    0.08480363,
    0.0029159593,
    0.050813366,
    0.0022348636,
    0.008169965,
    -0.015147599,
    0.024050297,
    -0.0046371757,
    -0.04629385,
    0.0019991186,
    0.028493939,
    -0.03129526,
    0.034280747,
    0.07717693,
    0.03534972,
    -0.01299968,
    -0.010727546,
    -0.030836767,
    0.0072415154,
    -0.13677529,
    0.012819219,
    -0.0007437954,
    -0.020726763,
    -0.03402895,
    -0.014691065,
    -0.0581166,
    0.06068674,
    0.026072187,
    0.029099224,
    0.008352991,
    -0.016817307,
    0.036205415,
    0.012584677,
    -0.00021426982,
    0.032910567,
    -0.02404611,
    -0.04580273,
    0.02280405,
    -0.070713975,
    0.022821557,
    -0.014481411,
    0.045669228,
    -0.026112486,
    0.02793844,
    -0.00748923,
    0.0027939996,
    -0.0126813715,
    -0.07330115,
    -0.014571725,
    -0.008632551,
    0.0068318574,
    -0.00007209694,
    0.01443936,
    0.013771579,
    0.054195743,
    -0.008875908,
    -0.055275716,
    -0.0023552876,
    0.019198267,
    0.024615992,
    0.031208603,
    0.003242425,
    -0.01789941,
    -0.010321203,
    -0.04183947,
    -0.03752714,
    -0.00023212314,
    -0.011138495,
    -0.017666703,
    -0.02901263,
    0.0042513334,
    0.015244116,
    -0.05376674,
    0.008430704,
    -0.025084004,
    -0.004776585,
    0.0010266451,
    -0.041689795,
    0.020607794,
    -0.009908982,
    -0.026523393,
    0.0508226,
    -0.014793499,
    -0.015025409,
    0.018985687,
    0.0021687422,
    -0.044809617,
    0.038003303,
    -0.02133986,
    0.049667068,
    -0.0058834422,
    0.008841459,
    -0.014691799,
    -0.022919327,
    0.010908206,
    0.039675295,
    -0.018330347,
    -0.028234238,
    -0.09511218,
    -0.009345763,
    -0.028212395,
    -0.03472487,
    0.028970953,
    -0.010152426,
    -0.046534985,
    -0.004317294,
    0.024833778,
    0.02241777,
    0.3008021,
    0.054726943,
    0.057282437,
    -0.033192072,
    0.06222148,
    -0.0076256488,
    0.0077358778,
    0.02675255,
    0.0005854054,
    -0.019665394,
    0.010060666,
    0.0044854297,
    0.009337784,
    0.033721387,
    -0.0106621655,
    0.04326067,
    -0.032226793,
    0.0077561117,
    0.055126898,
    0.0014761196,
    -0.020853054,
    0.029197656,
    0.03315364,
    -0.017106336,
    -0.0140556535,
    -0.017851535,
    0.0075745154,
    0.0058377725,
    0.02494715,
    0.031211115,
    -0.012496456,
    0.004835507,
    -0.03236291,
    -0.03964274,
    -0.04259446,
    0.008281313,
    -0.010175581,
    -0.029207198,
    0.0000030129677,
    -0.011695221,
    -0.010626974,
    -0.022575766,
    0.032510664,
    -0.022000551,
    0.02636629,
    0.028751096,
    0.053344306,
    0.0019613432,
    0.017734338,
    0.0063753403,
    -0.0029328475,
    -0.027958438,
    -0.0046910043,
    -0.011412643,
    -0.033967957,
    -0.011783322,
    -0.036876876,
    -0.057526752,
    0.0043602167,
    0.04205422,
    0.018924069,
    0.051056847,
    -0.01167884,
    -0.016148567,
    -0.004540711,
    -0.0031230426,
    0.007949915,
    -0.025858132,
    -0.011284123,
    0.025862254,
    -0.030962296,
    -0.013115287,
    -0.0050926073,
    0.049757887,
    -0.013403212,
    0.03433115,
    -0.021722155,
    0.03673676,
    -0.024103114,
    0.03213743,
    0.0015078197,
    -0.0294241,
    -0.021777874,
    -0.053793397,
    -0.00056316133,
    -0.044541784,
    -0.02772491,
    0.032913268,
    0.05757932,
    -0.0048296982,
    0.052239247,
    -0.04440513,
    -0.029328376,
    0.0016837005,
    -0.03820427,
    -0.03819372,
    0.025757724,
    -0.02689313,
    -0.00089484506,
    -0.020792397,
    -0.0037583678,
    -0.016339403,
    -0.015701206,
    0.04890408,
    0.040234346,
    0.023417383,
    0.022305572,
    0.021826232,
    -0.010670909,
    -0.0057187527,
    0.02622088,
    0.0005861381,
    0.019217914,
    0.015924625,
    0.01141769,
    0.016859492,
    0.06229151,
    -0.019449538,
    0.034141734,
    -0.0037530703,
    -0.028638223,
    -0.0048263846,
    -0.00783671,
    0.027385956,
    -0.034952305,
    0.0063347053,
    -0.015774319,
    -0.034813423,
    0.001941109,
    0.018360855,
    -0.011073877,
    -0.024852192,
    -0.0040153433,
    0.070759125,
    0.08083592,
    -0.017579516,
    0.024991227,
    0.0032510352,
    -0.007913227,
    0.016781542,
    0.011973064,
    0.011269094,
    -0.025949981,
    -0.02125305,
    -0.02167601,
    0.05353913,
    -0.006830412,
    0.007266305,
    -0.038001057,
    0.0069606816,
    0.011758076,
    -0.0035206599,
    0.04340891,
    -0.05378809,
    -0.024859544,
    -0.031587575,
    -0.014322185,
    -0.013858472,
    0.030685462,
    -0.021379132,
    -0.026446236,
    0.04361028,
    0.022976482,
    0.10416839,
    -0.006600662,
    0.019237295,
    0.0035700726,
    0.07070805,
    -0.00021926699,
    -0.0072667636,
    0.036187913,
    -0.020697065,
    -0.003268228,
    0.020714685,
    0.0032418661,
    -0.04377509,
    -0.007933635,
    0.033755347,
    -0.005925454,
    0.030886162,
    0.0348322,
    -0.010105536,
    -0.0049769417,
    -0.00040265018,
    0.0032835316,
    0.007139741,
    0.0028411099,
    -0.010552244,
    0.05642263,
    -0.021831172,
    -0.0006712433,
    0.017462704,
    -0.0018711771,
    0.0027653666,
    0.06534743,
    0.0058854907,
    0.04537221,
    0.006860379,
    -0.020011256,
    -0.05441629,
    0.00944642,
    0.00487319,
    0.0022196,
    -0.018509168,
    -0.006418644,
    -0.024289513,
    -0.013314731,
    -0.0036416198,
    0.00047904803,
    0.028672902,
    -0.012868278,
    0.01415343,
    0.01262936,
    0.013116227,
    -0.027192554,
    -0.002741546,
    0.025583517,
    0.032983247,
    -0.013564481,
    -0.036591545,
    0.032341,
    0.009003457,
    0.04177333,
    -0.05772763,
    -0.010579758,
    -0.016702574,
    0.021798179,
    0.0066915345,
    -0.016985677,
    0.021437492,
    -0.0016007759,
    -0.020838527,
    -0.024589099,
    0.021531405,
    0.029462205,
    -0.031921342,
    -0.05231933,
    0.027269201,
    -0.009981175,
    -0.01193241,
    0.018041972,
    -0.0027809641,
    0.0288872,
    0.06566509,
    0.00047474686,
    0.048085026,
    -0.00064560235,
    -0.039139785,
    -0.001840836,
    -0.028432094,
    -0.046746228,
    0.017358847,
    0.032980587,
    0.00816466,
    -0.022749871,
    0.0061597046,
    -0.008179734,
    -0.00070602185,
    -0.010476151,
    0.005731719,
    -0.0029846497,
    0.03662089,
    -0.0126262205,
    0.0058251345,
    -0.05877802,
    0.026051428,
    0.018118635,
    -0.005649255,
    -0.03765495,
    -0.019082317,
    0.025467433,
    -0.008269299,
    0.022951093,
    0.0049939384,
    0.023340551,
    0.020077173,
    -0.043238122,
    0.022169018,
    0.008686095,
    0.045443248,
    -0.044466306,
    -0.006848139,
    -0.011732251,
    0.028109523,
    -0.01271661,
    0.04516918,
    -0.0035128947,
    0.017074551,
    -0.02440755,
    -0.010026856,
    -0.04197637,
    -0.014229598,
    -0.04945068,
    0.0056204246,
    -0.055979554,
    0.004389643,
    -0.014758326,
    0.022307247,
    -0.044715766,
    0.037033323,
    -0.0077239354,
    0.008653652,
    -0.0014660121,
    0.005376271,
    0.027096892,
    -0.0020389915,
    -0.018762363,
    -0.021376649,
    0.02896588,
    0.003969514,
    -0.007426716,
    -0.0624853,
    -0.005760426,
    0.037066165,
    0.015639674,
    -0.052299365,
    0.027391128,
    -0.018107079,
    -0.006952544,
    0.03247736,
    0.003908371,
    0.0093394965,
    0.014414649,
    0.01980606,
    0.039750222,
    0.0035955086,
    -0.042619787,
    -0.025811384,
    -0.0051859934,
    -0.0124975685,
    -0.016214466,
    -0.012302978,
    -0.017613035,
    -0.034019608,
    -0.008424452,
    0.0024725443,
    0.058495358,
    0.037453532,
    -0.017827457,
    -0.03420378,
    -0.019729666,
    0.08031249,
    0.008089247,
    -0.035377413,
    -0.015524998,
    -0.018772047,
    0.034380734,
    0.003913284,
    0.040268116,
    -0.023634162,
    0.009470738,
    0.026006963,
    -0.019315682,
    -0.02533474,
    0.032721475,
    0.035768922,
    -0.046036784,
    -0.023754356,
    -0.018538732,
    -0.022156842,
    -0.040176988,
    0.02364296,
    -0.03499575,
    0.015604223,
    0.008539792,
    -0.0048672576,
    -0.004223042,
    0.030443171,
    -0.0018435114,
    0.009280213,
    -0.020057408,
    0.025212096,
    -0.008440515,
    -0.005322043,
    -0.047767173,
    0.053651515,
    -0.0030296114,
    -0.03794897,
    0.026012426,
    0.006541763,
    -0.0007948089,
    -0.040968973,
    -0.026858874,
    -0.049137488,
    0.018297054,
    -0.041269522,
    0.013786574,
    -0.00026297124,
    0.0240983,
    0.05332902,
    -0.029609038,
    -0.008824157,
    -0.017072326,
    -0.026480213,
    -0.18729927,
    0.03351649,
    0.012917041,
    -0.04377617,
    -0.014233753,
    0.0040320638,
    -0.0003464315,
    0.01140974,
    0.007128093,
    0.026261592,
    -0.044510536,
    0.003130443,
    0.00035514135,
    -0.015137496,
    0.045810547,
    0.020191912,
    -0.005251947,
    -0.0070698606,
    0.011629407,
    0.044250265,
    0.022158174,
    -0.0061344677,
    0.024706136,
    0.005360042,
    0.008475492,
    -0.045696005,
    0.0110276025,
    -0.0043635187,
    -0.0398825,
    -0.011124466,
    -0.017576687,
    -0.0152936345,
    0.0058833486,
    -0.037460428,
    -0.01272318,
    0.008430762,
    0.015457946,
    0.007942566,
    0.0049811318,
    0.008520309,
    0.048659768,
    -0.008001388,
    -0.07734038,
    0.0024657235,
    -0.06657865,
    0.006608542,
    0.014891504,
    -0.022809403,
    -0.07499216,
    -0.042210992,
    0.0160597,
    0.0040119733,
    0.036301307,
    0.021799428,
    -0.007091675,
    0.00024550493,
    0.01654011,
    0.013581112,
    -0.0064427126,
    0.07868453,
    -0.016207889,
    0.0015265022,
    -0.053503964,
    -0.06627662,
    -0.042553786,
    0.022815734,
    -0.03753758,
    0.007404807,
    -0.01741999,
    0.0089678485,
    -0.017207915,
    -0.016374612,
    0.04605483,
    -0.02593977,
    0.026156245,
    0.025723275,
    -0.0044070333,
    -0.045259878,
    -0.04569732,
    0.00092170894,
    -0.025338659,
    0.0085533755,
    0.0020065773,
    -0.035949018,
    -0.03144356,
    -0.009467766,
    -0.0024496766,
    -0.02000422,
    -0.051061943,
    -0.00041856736,
    -0.0719578,
    -0.04053857,
    -0.012000291,
    0.022398008,
    -0.021587128,
    -0.0006694591,
    -0.007229666,
    -0.043736946,
    -0.02940525,
    -0.01586162,
    -0.017734926,
    -0.013276495,
    -0.03399207,
    0.023857612,
    -0.011527495,
    0.00070441165,
    -0.017935233,
    -0.017900435,
    0.014556374,
    0.015030018,
    -0.021757487,
    -0.02347701,
    0.0077404995,
    0.019606778,
    0.036488794,
    0.01295715,
    0.0069116903,
    0.01738166,
    -0.008311255,
    -0.0026886815,
    -0.018785587,
    -0.005486811,
    -0.011251684,
    -0.059487946,
    -0.0038730658,
    0.0023230526,
    0.034195866,
    0.02515332,
    -0.024964243,
    -0.04627198,
    0.020512573,
    -0.047278475,
    0.024510145,
    0.018342659,
    -0.01864558,
    0.0021274602,
    -0.05340396,
    0.006682877,
    -0.05200862,
    -0.0068263146,
    -0.013673125,
    0.02319931,
    0.013708022,
    -0.02019073,
    -0.055579368,
    0.023529835,
    0.0563475,
    0.026105972,
    -0.023888996,
    -0.039191622,
    0.016212475,
    0.004670384,
    -0.005233577,
    0.0021181554,
    -0.03141078,
    0.02330904,
    -0.014888422,
    -0.017608942,
    0.061231486,
    0.008293003,
    0.015043651,
    0.0301516,
    -0.015443746,
    -0.009422649,
    -0.04368565,
    0.036036815,
    0.005342908,
    -0.0015801635,
    -0.037004583,
    -0.018984936,
    0.038135637,
    0.029203694,
    -0.027667444,
    0.026033537,
    0.037641495,
    -0.016592206,
    0.024165587,
    0.01462707,
    0.032152206,
    0.009047753,
    0.028783983,
    0.0057020052,
    0.049715724,
    0.030729985,
    0.020906033,
    0.018081512,
    0.006376587,
    0.004947235,
    0.019563902,
    0.017418899,
    0.014274621,
    0.029396428,
    0.04607492,
    -0.021101784,
    0.07758855,
    0.09041329,
    -0.005862231,
    -0.021424245,
    0.017377548,
    -0.008398738,
    0.008232094,
    0.011499922,
    0.018413065,
    -0.018055972,
    -0.025167413,
    0.02251904,
    -0.050531514,
    0.006383005,
    -0.033480547,
    0.01269841,
    0.016093012,
    -0.03232307,
    0.017901221,
    0.074445285,
    0.009129992,
    0.00704285,
    -0.022776742,
    -0.014308436,
    0.0056545343,
    -0.010971543,
    -0.08583483,
    -0.01969414,
    -0.037594873,
    0.021437356,
    -0.018673904,
    0.0030999528,
    -0.056702167,
    0.036061343,
    0.007532264,
    0.004788571,
    -0.032159273,
    -0.08204009,
    -0.004555247,
    0.010684643,
    0.027894594,
    -0.054986704,
    0.030270906,
    0.021701971,
    -0.011156066,
    -0.0114526665,
    -0.020679139,
    0.01312595,
    -0.044180013,
    0.018512564,
  ],
]
`;

exports[`generate_embeddings should generate embeddings for 2 strings/batch:false 1`] = `
[
  -0.040223494,
  0.036910173,
  -0.029072426,
  0.01620091,
  -0.035772048,
  -0.04076332,
  -0.055214636,
  -0.040958237,
  0.003247558,
  0.0019827713,
  -0.00666854,
  0.0116274115,
  0.021592887,
  -0.013407999,
  0.030296259,
  0.0042019538,
  0.020469557,
  -0.022949385,
  -0.02201794,
  -0.03109984,
  -0.050929394,
  -0.017461233,
  0.012290435,
  -0.014042799,
  0.015395629,
  0.041218746,
  -0.036899615,
  -0.0006291881,
  0.00036546998,
  -0.06098459,
  0.037168358,
  0.08009707,
  -0.017955288,
  -0.04980442,
  -0.03419127,
  -0.035745367,
  0.004458627,
  0.00081524585,
  -0.06881104,
  0.010894425,
  0.015911995,
  0.022516698,
  0.023183638,
  -0.05889619,
  0.002168551,
  -0.044268668,
  -0.04046761,
  -0.002440914,
  0.0032916146,
  -0.06478305,
  0.009072804,
  0.03206246,
  0.037781913,
  -0.001057974,
  0.0034809366,
  0.02224112,
  -0.016867235,
  -0.023028448,
  -0.062129,
  0.0019882624,
  -0.020531269,
  -0.009342835,
  -0.0035411431,
  -0.00788465,
  0.002988684,
  0.15492971,
  0.030647403,
  -0.013308477,
  -0.004863455,
  -0.015082439,
  -0.018025309,
  -0.012127098,
  -0.0009241285,
  0.022337198,
  -0.06574847,
  0.04704821,
  -0.015045466,
  -0.011313654,
  0.013529516,
  0.036275294,
  0.07957706,
  -0.004288955,
  -0.00016959794,
  0.017653687,
  -0.013293977,
  0.047866434,
  0.014952005,
  0.036797117,
  -0.004336811,
  -0.013558303,
  -0.037311915,
  -0.02313383,
  0.027804252,
  -0.051471755,
  -0.028470213,
  0.016755445,
  -0.0055215294,
  0.019557206,
  0.036271956,
  0.033139374,
  0.04892908,
  0.018777413,
  0.009225647,
  -0.01303223,
  0.0026263122,
  0.0041349004,
  0.026712917,
  0.02685435,
  0.022832995,
  0.0132132135,
  0.048743,
  0.02738433,
  0.020036452,
  0.02199094,
  0.013213266,
  -0.008269891,
  0.0028213186,
  -0.016591176,
  -0.0040015145,
  -0.022262264,
  -0.0076761497,
  0.02666505,
  0.023431187,
  0.009735227,
  0.028961232,
  -0.049734734,
  0.008873205,
  0.034977853,
  -0.017548975,
  -0.02679054,
  0.06384383,
  0.0069157765,
  -0.034251057,
  0.0045064865,
  -0.006364648,
  -0.030602371,
  -0.0026401146,
  -0.025854437,
  -0.013344763,
  -0.028475752,
  0.022518668,
  0.06846874,
  -0.021445045,
  -0.014992474,
  -0.013668433,
  -0.052522838,
  -0.028572522,
  0.014152912,
  0.018677576,
  -0.041450456,
  -0.0039821933,
  -0.021429459,
  0.033647884,
  0.0468145,
  0.032547835,
  0.003226234,
  -0.042875435,
  0.032136783,
  -0.0054103835,
  -0.014403589,
  0.013746957,
  -0.005504929,
  -0.04080636,
  -0.013715998,
  -0.0023966802,
  0.004317579,
  0.036359716,
  0.02484958,
  0.0036225736,
  0.0038093324,
  -0.0128902495,
  -0.00989117,
  0.02657123,
  -0.02004453,
  -0.015467018,
  0.023334084,
  0.056861002,
  0.024352059,
  0.017912382,
  -0.036585413,
  -0.042832654,
  0.0065943464,
  -0.00043394277,
  -0.023205237,
  -0.04481378,
  0.034812726,
  -0.029750895,
  -0.009519412,
  0.023950947,
  0.0108516645,
  0.0013421407,
  -0.009194147,
  0.031681787,
  -0.038750697,
  0.0075795697,
  0.007997994,
  0.0040703285,
  -0.01185898,
  -0.030216528,
  -0.00092430616,
  -0.03326987,
  -0.0043656155,
  -0.004172702,
  0.07070254,
  -0.0630661,
  0.0006202437,
  -0.012102176,
  -0.0098432265,
  0.030897569,
  -0.019122427,
  0.021461759,
  0.03370573,
  0.025960753,
  -0.0218747,
  -0.060582917,
  0.013210318,
  -0.04244365,
  0.0018250066,
  -0.004718639,
  -0.017809791,
  0.012653244,
  -0.01643057,
  -0.004954422,
  0.018837256,
  0.014209665,
  0.0060657035,
  0.009076278,
  0.0042796494,
  0.023370704,
  0.01362946,
  0.037219122,
  -0.0076780417,
  0.0033769505,
  -0.028068798,
  -0.008844272,
  -0.019027423,
  -0.055774488,
  -0.0011853062,
  0.0369704,
  0.008710457,
  -0.003702908,
  -0.009777154,
  -0.01151059,
  -0.0072179437,
  -0.042655986,
  0.05371848,
  -0.009385003,
  0.013167632,
  0.0036928435,
  0.0054824254,
  0.0124827465,
  -0.025427278,
  -0.0034876808,
  0.026318392,
  0.066196814,
  0.00057881634,
  -0.010478483,
  -0.010165479,
  -0.0052919397,
  -0.024490291,
  0.023439089,
  -0.060232025,
  0.013613779,
  0.05238485,
  0.02742825,
  0.009827107,
  -0.023323307,
  -0.014748259,
  0.018340174,
  0.008516631,
  0.015711766,
  -0.06771214,
  -0.010658552,
  -0.019776905,
  -0.007950745,
  0.016271098,
  -0.012776468,
  -0.04696763,
  0.0203838,
  0.0128400475,
  0.042937115,
  -0.0032076268,
  0.036121644,
  -0.017869536,
  -0.0012877882,
  0.017093716,
  -0.06802191,
  0.014688999,
  0.029801363,
  -0.04731412,
  0.016147185,
  0.056355268,
  0.030687867,
  -0.008921309,
  0.021186918,
  -0.0033205329,
  -0.010277796,
  -0.16280085,
  0.0033566002,
  0.013467126,
  -0.04851665,
  0.007291625,
  -0.03249049,
  -0.032293443,
  0.047209937,
  -0.0014013714,
  0.020064324,
  -0.026038907,
  -0.0010579019,
  -0.037636608,
  0.032780156,
  -0.02075346,
  0.0269249,
  0.009221672,
  -0.03529381,
  0.058765456,
  -0.056221098,
  0.004809797,
  -0.010666879,
  0.07082909,
  -0.030068832,
  0.022619823,
  0.0021392542,
  0.035419416,
  -0.04316011,
  -0.053454395,
  0.002246863,
  -0.03243077,
  0.011656234,
  -0.0064708726,
  0.021072635,
  0.024108421,
  0.050854597,
  0.023031052,
  -0.037844222,
  0.004458516,
  0.020019948,
  0.0045154155,
  0.01569389,
  0.0051477137,
  0.023567485,
  -0.018055364,
  -0.045970283,
  -0.03655653,
  0.004138227,
  -0.013965852,
  -0.0017617985,
  -0.014458689,
  -0.0041283485,
  -0.022019248,
  -0.056299303,
  -0.018144485,
  0.013029218,
  -0.032033566,
  0.017988667,
  -0.01263482,
  -0.010691798,
  -0.014436746,
  -0.037939075,
  0.018391315,
  0.0030770446,
  -0.014009116,
  0.018493747,
  0.018158842,
  -0.029859683,
  0.016019218,
  -0.015132705,
  0.020267934,
  0.0024080526,
  0.0034028853,
  -0.031878702,
  0.016926268,
  -0.010497388,
  0.034737594,
  -0.009953177,
  -0.03642667,
  -0.14922994,
  -0.028246917,
  0.00294029,
  -0.028278569,
  -0.00031151494,
  -0.028561834,
  -0.015642446,
  -0.0033069465,
  0.039262388,
  0.073648565,
  0.30555972,
  0.033346426,
  0.032417253,
  -0.030150896,
  0.073720865,
  -0.03255868,
  0.005349842,
  0.0048314445,
  0.00032458417,
  -0.021801919,
  -0.018524932,
  -0.031910975,
  0.0061979895,
  0.03291013,
  0.0182857,
  0.05128744,
  -0.060227234,
  -0.015408525,
  0.048075695,
  0.026021654,
  0.008008963,
  0.017790588,
  0.0048249396,
  -0.023229279,
  -0.02076592,
  -0.011923052,
  -0.0049590776,
  0.030895416,
  0.0071928767,
  0.021544082,
  0.00794731,
  0.0045584375,
  0.021935519,
  -0.0030565087,
  -0.04007751,
  0.0072690425,
  0.006807841,
  -0.039283942,
  -0.016751656,
  0.022391401,
  -0.030006437,
  -0.021088991,
  0.030172776,
  0.01925516,
  0.0415842,
  0.025542352,
  0.024600163,
  -0.025949534,
  -0.037388265,
  0.029131478,
  -0.037146445,
  -0.0042820526,
  -0.0044486485,
  0.014348312,
  -0.009164729,
  -0.016430087,
  0.0027597,
  -0.051079314,
  0.024986243,
  0.033393387,
  0.020908948,
  0.0623419,
  -0.021023996,
  -0.041090515,
  -0.023160461,
  -0.008906179,
  0.015737936,
  -0.004730726,
  -0.008134597,
  0.0381327,
  0.0083448365,
  -0.041051954,
  -0.019731767,
  0.01997418,
  0.029300012,
  0.014527425,
  0.004087756,
  0.030718744,
  0.018336209,
  0.01985848,
  0.0026524235,
  -0.022996109,
  -0.040013786,
  -0.032847404,
  -0.009666706,
  -0.017328374,
  -0.0047005867,
  0.07286257,
  0.029017853,
  -0.027826004,
  0.03088135,
  0.0039099487,
  -0.05238098,
  0.020412818,
  -0.047311977,
  -0.055919576,
  0.028725293,
  -0.016556734,
  -0.015442391,
  0.01789275,
  -0.030860165,
  0.00037813836,
  -0.04411114,
  0.06464235,
  0.021878205,
  -0.036628313,
  0.006460182,
  -0.00014959167,
  0.013352282,
  0.019025493,
  0.027055077,
  -0.021064332,
  0.026030306,
  0.039356876,
  0.010671941,
  0.012244259,
  0.018610606,
  -0.009453336,
  0.030056193,
  0.008376459,
  -0.029269494,
  -0.046163626,
  -0.016707808,
  0.05149172,
  -0.0004296639,
  0.01922538,
  -0.02648712,
  0.014763846,
  -0.019442154,
  0.018361079,
  -0.0013559518,
  -0.018726807,
  -0.00053384557,
  0.053640965,
  0.065491475,
  0.0056911074,
  0.054243166,
  -0.0020235574,
  -0.013018479,
  0.045204446,
  0.006158983,
  0.025155023,
  -0.0070082447,
  -0.009661016,
  -0.013117978,
  0.019861551,
  -0.020361846,
  -0.0128879,
  -0.0013944322,
  0.018099874,
  0.0055428906,
  -0.01469709,
  -0.000014971983,
  -0.023135033,
  -0.016745402,
  0.0016716731,
  -0.032241035,
  -0.035283826,
  0.024723385,
  -0.00935058,
  0.014869176,
  0.029794183,
  0.075513326,
  0.12633172,
  0.026478203,
  -0.0038659489,
  0.010339518,
  0.043841112,
  0.0075575043,
  -0.008861499,
  0.0057836175,
  -0.034817975,
  -0.035664424,
  0.00891008,
  0.016974645,
  -0.0218359,
  -0.008139394,
  0.023770466,
  -0.02786345,
  0.036499992,
  0.06553916,
  0.00636152,
  0.006697265,
  -0.013035399,
  0.024151614,
  -0.017860677,
  0.013207234,
  -0.011449451,
  0.016117128,
  -0.017444935,
  0.014809877,
  0.053789537,
  -0.002032969,
  -0.021832388,
  0.04925754,
  -0.026106479,
  0.041987598,
  0.0132713765,
  -0.017800152,
  -0.043730866,
  -0.013001231,
  0.003842228,
  0.022036353,
  -0.030558832,
  -0.026698878,
  -0.023517268,
  0.0011036105,
  -0.016480653,
  -0.013930081,
  0.028024752,
  0.010193769,
  -0.038880777,
  -0.015026466,
  0.021865772,
  -0.020322867,
  -0.028457686,
  0.0121673765,
  0.046574056,
  -0.028451476,
  -0.038290117,
  -0.004126179,
  0.0073566413,
  0.06328551,
  -0.053586356,
  0.01348283,
  -0.009372224,
  0.047734153,
  -0.029718664,
  -0.017957311,
  0.024366671,
  0.00038854824,
  -0.027755074,
  0.0062397015,
  -0.015224107,
  0.046232134,
  -0.03310224,
  -0.026330186,
  0.01785415,
  -0.015088509,
  0.035948828,
  0.005287949,
  -0.0039667436,
  0.004444719,
  0.05423982,
  0.006520454,
  0.010328155,
  0.027840048,
  -0.045529295,
  0.0077701514,
  0.006600639,
  -0.06761529,
  0.0056811473,
  0.03611592,
  -0.025570968,
  -0.0422498,
  0.018868644,
  0.023924276,
  -0.00452581,
  -0.036659595,
  0.023667302,
  0.0044012372,
  0.034776166,
  -0.010890701,
  -0.0148946475,
  -0.018588085,
  -0.00936958,
  0.035587303,
  0.0063421284,
  -0.016434658,
  -0.024883663,
  0.021376904,
  -0.0074684545,
  0.023650132,
  -0.0030113778,
  -0.018074531,
  0.031209398,
  -0.022836555,
  0.034231618,
  0.019035552,
  0.005840156,
  -0.057343118,
  0.009626367,
  -0.0350932,
  0.039624464,
  -0.007863393,
  -0.001345397,
  0.025608033,
  -0.013190005,
  -0.008396385,
  -0.008355686,
  -0.0027002336,
  -0.03474372,
  -0.040733106,
  0.018405523,
  -0.04677195,
  0.04512251,
  -0.009523362,
  0.0135085825,
  -0.039295126,
  0.008816639,
  -0.019147161,
  0.050016277,
  -0.013271826,
  -0.018226197,
  -0.0004208431,
  -0.0009348703,
  -0.008225479,
  -0.019610288,
  0.019781938,
  -0.0022501776,
  -0.013031737,
  -0.036474798,
  -0.0028121378,
  -0.021379223,
  0.0387022,
  -0.018510222,
  0.03142811,
  -0.062358662,
  -0.009643623,
  0.040097468,
  0.046088852,
  0.016391188,
  0.039585963,
  0.035732035,
  0.045156162,
  -0.015466972,
  -0.0062326435,
  -0.0044605723,
  -0.023641014,
  -0.0025102631,
  -0.02804915,
  0.030316882,
  0.0075768777,
  -0.053215403,
  -0.017338224,
  -0.022204785,
  0.054142844,
  0.02442842,
  -0.029759366,
  -0.037938483,
  -0.023520447,
  0.071666956,
  0.009142069,
  -0.019743338,
  0.007091727,
  -0.012135239,
  -0.00091834867,
  -0.015332468,
  0.030312857,
  0.0047971345,
  -0.016171021,
  0.030237738,
  -0.036900196,
  -0.027820894,
  0.03161851,
  0.030564306,
  -0.037563182,
  -0.020743731,
  0.00723575,
  -0.0034293872,
  -0.022671359,
  0.053060647,
  0.004430129,
  0.015102925,
  0.027057819,
  0.018593183,
  -0.03236886,
  0.053305257,
  0.0071938657,
  -0.0024120759,
  -0.0048797666,
  0.040714692,
  0.0082616145,
  0.0045925765,
  -0.053526506,
  0.02972987,
  -0.010869665,
  0.0022602992,
  0.02508709,
  0.014644995,
  -0.0023726653,
  -0.050012384,
  -0.028790193,
  -0.043853424,
  0.018869298,
  -0.0335513,
  -0.012590997,
  0.0066764606,
  -0.002177006,
  0.017686278,
  -0.032091685,
  -0.030381594,
  -0.028988672,
  -0.0043685334,
  -0.19601347,
  0.024138112,
  -0.009613194,
  -0.012327065,
  -0.017078161,
  -0.010793456,
  -0.019551327,
  -0.008812141,
  0.016599972,
  0.00008988066,
  -0.039879736,
  0.03170808,
  -0.00005249249,
  -0.041465968,
  0.0474765,
  -0.0024296169,
  -0.0075569255,
  -0.0039090826,
  0.0043218043,
  0.038181737,
  0.017228879,
  -0.0056666965,
  0.025013775,
  0.011159141,
  0.06135363,
  -0.014517336,
  -0.020243455,
  0.00292658,
  -0.029655289,
  -0.022527033,
  -0.013030612,
  -0.059950564,
  0.00022637159,
  0.009870713,
  -0.013099324,
  0.02379806,
  -0.0037634023,
  -0.0034948476,
  0.010573829,
  0.007586072,
  -0.017368196,
  0.0073617143,
  -0.05766283,
  0.00041824303,
  -0.04631778,
  0.021285545,
  -0.039989844,
  -0.043034386,
  -0.036568485,
  -0.0549506,
  0.01219505,
  -0.017824685,
  0.00089092215,
  0.024944775,
  -0.021443883,
  -0.014412883,
  -0.009493901,
  0.014294137,
  -0.012371945,
  0.031888764,
  -0.026009684,
  -0.01696971,
  -0.004908054,
  -0.07058094,
  -0.06314025,
  0.0008589997,
  -0.058544014,
  0.015329897,
  0.026659481,
  0.016187247,
  -0.007063368,
  -0.031983346,
  0.044639546,
  -0.014208329,
  0.019260643,
  -0.0054603308,
  0.018891092,
  -0.02238762,
  -0.03734214,
  0.013318947,
  -0.02530858,
  -0.032743633,
  -0.026020043,
  -0.015594075,
  -0.020505663,
  -0.002266781,
  -0.012095692,
  0.0067746174,
  -0.07546982,
  0.0040725134,
  -0.039307848,
  -0.0271055,
  -0.042825673,
  0.017372284,
  -0.024170304,
  -0.0027705112,
  -0.0129009895,
  -0.03856964,
  -0.020337652,
  -0.002390748,
  -0.021245906,
  -0.037413437,
  0.005886311,
  -0.02796163,
  0.0007066425,
  0.010551715,
  -0.00031993128,
  -0.014460644,
  0.0073531615,
  -0.00084766385,
  -0.035212755,
  -0.034534954,
  0.0053194924,
  0.023093853,
  0.04039603,
  0.02280827,
  -0.0020615144,
  -0.001829581,
  -0.0066550975,
  0.038915943,
  -0.043355078,
  0.0054669287,
  0.012519742,
  -0.041817762,
  -0.010449888,
  -0.011070965,
  0.013394426,
  0.014622529,
  -0.014017406,
  -0.04064007,
  0.034554064,
  -0.027782766,
  0.030677343,
  0.005160858,
  0.009487385,
  -0.002348627,
  -0.01922817,
  0.010623029,
  -0.050608218,
  -0.031557772,
  -0.01711053,
  0.017789515,
  0.010002852,
  -0.045369808,
  -0.016609317,
  0.005166705,
  0.04726733,
  0.0017104974,
  -0.036056574,
  -0.016848048,
  0.03232318,
  0.039878614,
  0.0018391074,
  0.012942271,
  -0.034168,
  -0.013163527,
  -0.0061449236,
  0.014930467,
  0.0482148,
  0.02692591,
  -0.00082051445,
  0.013749203,
  -0.026384888,
  -0.014447248,
  -0.008575848,
  0.036008008,
  0.0034129869,
  -0.001337549,
  -0.009111934,
  -0.057143394,
  -0.002023031,
  0.035943788,
  -0.035881564,
  0.021573164,
  0.059323177,
  -0.006293189,
  0.015798388,
  0.047867917,
  0.042718187,
  0.00047008504,
  0.03895299,
  0.0070030894,
  0.034475427,
  0.027069265,
  -0.038811505,
  -0.022347674,
  -0.0036512986,
  -0.0016905298,
  0.010702239,
  0.020945696,
  -0.018742444,
  0.022709914,
  0.006675667,
  -0.019669013,
  0.06406448,
  0.05420055,
  0.012572921,
  0.011896075,
  0.012408049,
  0.003918703,
  -0.021831654,
  -0.0331638,
  0.012143161,
  -0.035627656,
  -0.0017671047,
  0.03108699,
  -0.017562052,
  0.00008358474,
  -0.014061915,
  0.007862622,
  0.021937687,
  -0.03164676,
  0.015698554,
  0.028230492,
  -0.0031735834,
  0.03840146,
  -0.012075926,
  -0.018366782,
  -0.015970737,
  -0.0016141593,
  -0.04978215,
  -0.010410908,
  -0.046299987,
  0.0038824233,
  -0.012343668,
  0.010781683,
  -0.02399493,
  0.02565838,
  0.018806688,
  0.00021724716,
  -0.021614404,
  -0.00538639,
  -0.0056053516,
  0.02687011,
  0.008406284,
  -0.041691553,
  0.034371395,
  0.03595283,
  0.02149608,
  -0.004842879,
  -0.011119636,
  0.02644182,
  -0.032997318,
  0.016327105,
]
`;

exports[`generate_embeddings should generate find relevant chunks with access 1`] = `
[
  {
    "chunk_hash": "FKYYbXlhPW1otr6vUz38",
    "chunk_text": 
"# Crises du logement en France

## Voir aussi

### Bibliographie

- Pierrette Briant, division Logement, Insee, no 1291 - mai 2010 - L’accession à la propriété dans les années 2000
- Vincent Bénard, Le Logement : crise publique, remèdes privés, Romillat, 2007. (ISBN 2878941365), \\[présentation en ligne\\]
- Patrick Grépinet, La crise du logement. Des chiffres pour comprendre, des pistes pour agir, édition L'Harmattan, coll. Questions contemporaines, 2006, 200 p., (ISBN 2296005888)
- Christian Julienne, Logement, solutions pour une crise fabriquée, 2006, Paris, Les Belles Lettres, 332 p., (ISBN 2251443088), \\[présentation en ligne\\]
- Georges Mesmin, Urbanisme et logement : Analyse d'une crise, 1992, Paris, PUF, 173 p., (ISBN 2130448488)
- Fondation Abbé Pierre, L'état du mal logement en France
- Henry Hazlitt, L'économie politique en une leçon, édition de 1979, chap. 18 : Les résultats du contrôle des loyers, \\[lire en ligne\\]
- Jean-Claude Driant, Pierre Madec, Les crises du logement, PUF, 2018, 367 p.
- Fanny Bugeja-Bloch, Anne Lambert, Camille Noûs, « Les conditions de logement en France : une approche multidimensionnelle des inégalités de logement selon les classes sociales », Revue des politiques sociales et familiales, no 141,‎ 2021, p. 91-105 (DOI 10.3917/rpsf.141.0091)

### Liens externes

- "Crises et politiques du logement en France et au Royaume-Uni", colloque franco-britannique, décembre 2006, Paris
- Numéro de la revue Regards croisés sur l'économie consacré à la crise du logement en France

### Sources

- « Les facteurs fonciers et immobiliers de la crise du logement », rapport du Sénat, 2004

- Portail de l’économie
- Portail de la société
- Portail de l’architecture et de l’urbanisme
"
,
    "distance": 1.1476165056228638,
  },
  {
    "chunk_hash": "vlXdHn6MvJGxsJKEEukk",
    "chunk_text": 
"# Loi d'orientation et de programmation pour la ville et la rénovation urbaine

La loi no 2003-710 du 1er août 2003 d’orientation et de programmation pour la ville et la rénovation urbaine, parue au Journal officiel du 2 août 2003, dite loi Borloo, est une loi française.

Il ne faut pas la confondre avec le « plan Borloo », ou plan de cohésion sociale, voté en 2004.

## Contenu

La Loi Borloo s’articule autour de quatre axes :

### Politique de la ville et rénovation urbaine

- Réduction des inégalités sociales et des écarts de développement entre les territoires dans les zones urbaines sensibles (ZUS). Un observatoire national des ZUS est créé ;
- Création d’un programme national de rénovation urbaine (PNRU) dit « Plan Borloo ». Objectif : pour la période 2004-2008, 200 000 constructions de logements locatifs sociaux, 200 000 réhabilitations ou restructurations lourdes (dont résidentialisations) et 200 000 démolitions de logements vétustes ;
- Création de l’Agence nationale pour la rénovation urbaine (ANRU) ;
- Sécurité dans les immeubles collectifs et copropriétés en difficulté.

### Développement économique des quartiers prioritaires

Création de 41 nouvelles zones franches urbaines (ZFU) qui s'ajouteront aux 44 ZFU créées en 1999, elles-mêmes prolongées de cinq ans.

### Procédure de rétablissement personnel

Elle donnerait une seconde chance aux personnes surendettées du fait d’un « accident de la vie » (chômage, veuvage, divorce, maladie).

### Dispositions diverses

- HLM avec extension du rôle de la Caisse de garantie du logement locatif social (CGLLS) à la réorganisation des organismes HLM, création d’une nouvelle ressource pour cette dernière et modification de la gouvernance des SA d’HLM ;
- Autres dispositions dont le « surclassement » des communes comprenant une ou plusieurs ZUS.

## Annexes

### Articles connexes

- Loi Besson (logement)
- Défiscalisation en France

### Lien externe

- Texte de la loi

- Portail du droit français
- Portail des politiques sociales
- Portail de la politique française
- Portail des années 2000
"
,
    "distance": 1.1500266790390015,
  },
  {
    "chunk_hash": "hDgmJalXaKhR4JUljlOB",
    "chunk_text": 
"# Logement social en France

## Voir aussi

### Liens externes

- « L'Union sociale pour l'habitat » – Union des organismes HLM (France)
- « La Confédération Nationale du Logement » – CNL (France)
- « UNLI : Union Nationale des Locataires Indépendants » (France)
- « Agence Nationale pour l'Information sur le Logement » – ANIL (France)
- « Réseau des acteurs de l'habitat », fondé en 2007 par quatre associations d'élus, ACUF, ADCF, AMGVF, ADF et l'Union sociale pour l'habitat
- « Fédération Logement Consommation » (FLC)

- Portail de l’économie
- Portail du bâtiment et des travaux publics
- Portail de l’architecture et de l’urbanisme
- Portail de la France
"
,
    "distance": 1.154962182044983,
  },
  {
    "chunk_hash": "hKdLgB6o0Ub0vZdhzbbU",
    "chunk_text": 
"# Associations du département du Vaucluse (84 ou 84000) de protection contre les violence conjugales

**CIDFF du Vaucluse**

- Téléphone : 04 90 86 41 00
- Email : [https://vaucluse.cidff.info/contact/](https://vaucluse.cidff.info/contact/)
- Adresse : 2, place Alexandre Farnèse - Immeuble le Vinci - 84000 Avignon
- Site web : [https://vaucluse.cidff.info](https://vaucluse.cidff.info/)
- Permanences : Apt, Avignon, Carpentras, Cavaillon, Isle-sur-Sorgue, Le Pontet, Le Thor, Montfavet, Monteux, Orange, Pertuis, Pertuis, Sorgues, Valreas, Vedene.
"
,
    "distance": 1.167930006980896,
  },
  {
    "chunk_hash": "U6XXqYW1lIeXXBnq4HCx",
    "chunk_text": 
"# Ministre du Logement

Le ministre du Logement et de la Rénovation urbaine est membre du gouvernement français.

L'actuelle ministre du Logement et de la Rénovation urbaine est Valérie Létard en fonction depuis le 21 septembre 2024.

## Historique

Après la Seconde Guerre mondiale, le logement est associé au portefeuille de la Reconstruction. En 1967, le ministère de l’Équipement, dirigé par Edgard Pisani dans le quatrième gouvernement de Georges Pompidou, est créé par fusion de l’ancien ministère des Travaux Publics et des Transports, et de celui de la Construction.

En 2007, l'Équipement est absorbé par le ministère de l'Écologie. Plus récemment, le portefeuille du Logement est associé à celui de l'Aménagement du territoire ou celui de la Ville.

## Liste des ministres

Les dates indiquées sont les dates de prise ou de cessation des fonctions, qui sont en général la veille de la date du Journal officiel dans lequel est paru le décret de nomination.

### Troisième République

### Quatrième République

#### Ministre ou secrétaire d'État

#### Sous-secrétaire d'État (1956–1957)

Le poste de sous-secrétaire d'État au Logement est créé le 1er février 1956 lors de la formation du Gouvernement Guy Mollet. Il est supprimé le 6 novembre 1957 lors de la formation du Gouvernement Félix Gaillard.

### Cinquième République

## Galerie

## Notes et références

## Voir aussi

### Articles connexes

- Ministre chargé de la Ville
- Liste des ministres français de l'Équipement
- Liste des ministres français de la Construction
- Liste des ministres français de la Reconstruction et de l'Urbanisme
- Catégorie:Ministre français du Logement

### Liens externes

- Les gouvernements et les assemblées parlementaires sous la Ve République : 1958-2009, vol. 2, Secrétariat général de la Présidence et service de la Communication de l'Assemblée nationale, coll. « Connaissance de l'Assemblée », décembre 2008 (lire en ligne)
- « Les Gouvernements de la Ve République », Assemblée nationale (consulté le 24 mars 2010)
- « Les Gouvernements de la IVe République » (version du 15 février 2014 sur Internet Archive), Assemblée nationale
- « Les Gouvernements de la IIIe République » (version du 25 février 2014 sur Internet Archive), Assemblée nationale
- « Toutes les personnalités ayant occupé le poste de la Catégorie Logement », Base de données historiques des gouvernements et Présidents des assemblées parlementaires (Régimes politiques français depuis 1789), Assemblée nationale (consulté le 21 juin 2017)
- « Chronologie des ministres de la Ve République attributaires des domaines suivants : aménagement du territoire, construction, développement durable, énergie, environnement, équipement, logement, mer, tourisme, transports, travaux publics, urbanisme. » (version du 4 mars 2016 sur Internet Archive), Ministère de l'Écologie, de l'Énergie, du Développement durable et de la Mer

- Portail des politiques sociales
- Portail de la politique française
"
,
    "distance": 1.1707136631011963,
  },
]
`;
